刑事訴訟法 1982.7.23

--- a/司法-刑事/刑事訴訟法.md
+++ b/司法-刑事/刑事訴訟法.md
@@ -50,21 +50,33 @@
 
 * 26 第十七條至第二十條及第二十四條關於推事迴避之規定，於檢察官及辦理檢察事務之書記官準用之。但不得以曾於下級法院執行檢察官、書記官或通譯之職務，為迴避之原因。檢察官及前項書記官之迴避，應聲請所屬首席檢察官或檢察長核定之。首席檢察官之迴避，應聲請直接上級法院首席檢察官或檢察長核定之；其檢察官僅有一人者亦同。
 
-* 27 被告於起訴後，得隨時選任辯護人。被告之法定代理人、配偶、直系或三親等內旁系血親或家長、家屬、得獨立為被告選任辯護人。
+* 27 被告得隨時選任辯護人。犯罪嫌疑人受司法警察官或司法警察調查者，亦同。被告或犯罪嫌疑人之法定代理人、配偶、直系或三親等內旁系血親或家長、家屬，得獨立為被告或犯罪嫌疑人選任辯護人。
+
+> 釋：一、為期保護被告及犯罪嫌疑人之正當權益，爰將本條第一項原定「於起訴後」四字刪除，俾使起訴前之被告亦得隨時選任辯護人。又本法對於涉嫌犯罪而受司法警察官或司法警察調查中，尚未移送檢察官者，稱曰「犯罪嫌疑人」（見本法第二百二十九條第二項、第二百三十條第二項、第二百三十一條第二項），其權益亦有保護之必要，爰於本條第一項增訂「犯罪嫌疑人受司法警察官或司法警察調查者，亦同」一句，以示犯罪嫌疑人亦有選任辯護人之權。二、本條第二項增列「或犯罪嫌疑人」字樣，以配合第一項之修正。
 
 * 28 每一被告選任辯護人，不得逾三人。
 
-* 29 辯護人應選任律師充之。但經審判長許可者，亦得選任非律師為辯護人。
+* 29 辯護人應選任律師充之。但審判中經審判長許可者，亦得選任非律師為辯護人。
 
-* 30 辯護人之選任，應於每審級為之。前項選任應提出委任狀於法院。
+> 釋：本條原僅就審判中選任辯護人之資格而為規定，被告於審判中選任之辯護人，原則上應選任律師充之，經審判長許可者，例外亦得選任非律師為辯護人。惟依刑事訴訟法第二百四十五條之規定，偵查本不公開，而偵查中之准許選任辯護人，目的在於使偵查程序合法進行，及保護被告或犯罪嫌疑人之正當權益，因律師具有法學專門知識，負有嚴守偵查秘密之義務（參照修正條文第二百四十五條第三項及刑法第一百三十二條第三項），且須受律師法之約束，故偵查中選任之辯護人，自宜以律師充之為限，爰將本條但書修正為：「但審判中經審判長許可者，亦得選任非律師為辯護人。」俾資明確。
 
-* 31 最輕本刑為三年以上有期徒刑或高等法院管轄第一審之案件，未經選任辯護人者，審判長應指定公設辯護人為其辯護；其他案件認有必要者亦同。前項案件，選任辯護人於審判期日無正當理由而不到庭者，審判長得指定公設辯護人。被告有數人者，得指定一人辯護。但各被告之利害相反者，不在此限。指定辯護人後，經選任律師為辯護人者，得將指定之辯護人撤銷。
+* 30 選任辯護人，應提出委任書狀。前項委任書狀，於起訴前應提出於檢察官或司法警察官；起訴後應於每審級提出於法院。
+
+> 釋：一、本條原僅針對起訴後被告之辯護人而設。茲因起訴前亦許被告或犯罪嫌疑人選任辯護人，本條自應予以配合修正。二、辯護人之選任，固應以書面為之，惟本條第二項規定之「委任狀」，易與司法狀紙相混，尤其犯罪嫌疑人於司法警察官或司法警察調查中欲選任辯護人時，如必須前往法院購用司法狀紙，顯有不便，自宜參照本法第二百四十二條第一項用語，改訂為「委任書狀」，以資概括。爰將本條第一項修正為：「選任辯護人，應提出委任書狀」。三、本條修正第二項，規定起訴前辯護人之選任，在檢察官偵查中被告或其家屬等所具之委任書狀，應提出於檢察官，在司法警察官或司法警察調查中犯罪嫌疑人或其家屬等所具之委任書狀，應提出於司法警察官。至於起訴後辯護人之選任，仍照現行作法，應於每審級提出於法院。
+
+* 31 最輕本刑為三年以上有期徒刑或高等法院管轄第一審之案件，於審判中未經選任辯護人者，審判長應指定公設辯護人為其辯護；其他審判案件認有必要者，亦同。前項案件，選任辯護人於審判期日無正常理由而不到庭者，審判長得指定公設辯護人。被告有數人者，得指定一人辯護。但各被告之利害相反者，不在此限。指定辯護人後，經選任律師為辯護人者，得將指定之辯護人撤銷。
+
+> 釋：一、本條係關於強制辯護之規定。惟按何種案件應行強制辯護，須憑起訴法條而為認定，在偵查階段，被告未經起訴，尚不發生強制辯護之問題。且在偵查階段之檢察官、司法警察官或司法警察，僅對被告或犯罪嫌疑人之犯罪情形加以偵查或調查及蒐集證據，尚無需就法律或證據互為辯論，與審判程序必須公開辯論之規定情形不同，故在偵查程序中被告或犯罪嫌疑人選任辯護人，已足保護其權益，如不願選任或雖經選任而辯護人怠於執行職務者，實施偵查程序之公務員自無代為指定公設辯護人之必要，故修正本條例第一項，於第二句增列「於審判中」四字，第四句增列「審判」二字，以示本條之規定僅適用於審判程序。二、第二項至第四項均不修正。
 
 * 32 被告有數辯護人者，送達文書應分別為之。
 
-* 33 辯護人得檢閱卷宗及證物並得抄錄或攝影。
+* 33 辯護人於審判中得檢閱卷宗及證物並得抄錄或攝影。
 
-* 34 辯護人得接見羈押之被告，並互通書信。但有事實足認其有湮滅、偽造、變造證據或勾串共犯或證人之虞者，得限制之。
+> 釋：依刑事訴訟法第二百四十五條之規定，偵查不公開之，如許偵查中選任之辯護人對於卷宗及證物檢閱、抄錄或攝影，則不僅實質上有損偵查不公開之原則，且難免影響偵查之正常進行，自不應准許。爰修正本條增列「在審判中」四字，以示辯護人檢閱卷宗證物及抄錄或攝影，以審判程序中者為限。
+
+* 34 辯護人得接見犯罪嫌疑人及羈押之被告，並互通書信。但有事實足認其有湮滅、偽造、變造證據或勾串共犯或證人之虞者，得限制之。
+
+> 釋：本條原僅規定審判中之辯護人得接見羈押之被告，第二十七條修正後，偵查中所選任之辯護人自亦得接見羈押之被告或犯罪嫌疑人，並互通書信，爰修正本條，增列「犯罪嫌疑人及」六字，俾使於偵查及審判程序中均能適用。
 
 * 35 被告或自訴人之配偶、直系或三親等內旁系血親或家長、家屬或被告之法定代理人於起訴後，得向法院以書狀或於審判期日以言詞陳明為被告或自訴人之輔佐人。輔佐人得在法院陳述意見。
 
@@ -140,6 +152,10 @@
 
 * 71 傳喚被告，應用傳票。傳票，應記載左列事項：一、被告之姓名、性別、年齡、籍貫及住、居所。二、案由。三、應到之日、時、處所。四、無正當理由不到場者，得命拘提。被告之姓名不明或因其他情形有必要時，應記載其足資辨別之特徵。被告之年齡、籍貫、住、居所不明者，得免記載。傳票，於偵查中由檢察官簽名，審判中由審判長或受命推事簽名。
 
+* 71.1 司法警察官或司法警察，因調查犯罪嫌疑人犯罪情形及蒐集證據之必要，得使用通知書，通知犯罪嫌疑人到場詢問。經合法通知，無正當理由不到場者，得報請檢察官核發拘票。前項通知書，由司法警察機關主管長官簽名，其應記載事項，準用前條第二項第一款至第三款之規定。
+
+> 釋：一、參照修正草案第二百四十五條第二項規定，司法警察官、司法警察得訊問犯罪嫌疑人，爰增訂本條第一項，規定司法警察官或司法警察得使用通知書，通知犯罪嫌疑人到場接受詢問，俾資配合。二、為免犯罪嫌疑人，無正當理由不到場，影響調查犯罪之進行，故規定「得報請檢察官簽發拘票」。三、第三項係明定通知書應由司法警察機關主管長官簽名，以昭慎重，其應記載事項，並準用本法第七十一條第二項第一款至第三款之規定，以資配合。
+
 * 72 對於到場之被告，經面告以下次應到之日、時、處所及如不到場得命拘提，並記明筆錄者，與已送達傳票有同一之效力；被告經以書狀陳明屆期到場者亦同。
 
 * 73 傳喚在監獄或看守所之被告，應通知該監所長官。
@@ -173,6 +189,10 @@
 * 87 通緝經通知或公告後，檢察官、司法警察官得拘提被告或逕行逮捕之。利害關係人，得逕行逮捕通緝之被告，送交檢察官、司法警察官，或請求檢察官、司法警察官逮捕之。通緝於其原因消滅或已顯無必要時，應即撤銷。撤銷通緝之通知或公告，準用前條之規定。
 
 * 88 現行犯，不問何人得逕行逮捕之。犯罪在實施中或實施後即時發覺者，為現行犯。有左列情形之一者，以現行犯論：一、被追呼為犯罪人者。二、因持有兇器、贓物或其他物件，或於身體、衣服等處露有犯罪痕跡，顯可疑為犯罪人者。
+
+* 88.1 檢察官、司法警察官或司法警察偵查犯罪，有左列情形之一而情況急迫者，得逕行拘提之：一、因現行犯之供述，且有事實足認為共犯嫌疑重大者。二、在執行或在押中之脫逃者。三、有事實足認為犯罪嫌疑重大，經被盤查而逃逸者。但所犯顯係最重本刑為一年以下有期徒刑、拘役或專科罰金之罪者，不在此限。四、所犯為死刑、無期徒刑或最輕本刑為五年以上有期徒刑之罪，嫌疑重大，有事實足認為有逃亡之虞者。前項拘提，由檢察官親自執行時，得不用拘票；由司法警察官或司法警察執行時，以其急迫情況不及報告檢察官者為限，於執行後，應即報請檢察官簽發拘票。如檢察官不簽發拘票時，應即將被拘提人釋放。第一百三十條及第一百三十一條第一項之規定，於第一項情形準用之。但應即報檢察官。檢察官、司法警察官或司法警察，依第一項規定程序拘提之犯罪嫌疑人，應即告知其本人及其家屬，得選任辯護人到場。
+
+> 釋：一、檢察官、司法警察官或司法警察偵查犯罪，對於脫逃或顯有犯罪嫌疑而情節重大情形急迫者，如不能立即予以拘提，對於日後犯罪偵查，顯有重大困難，國家安全難以保障，並可能導致脫逃或犯罪嫌疑人危害社會行為之繼續擴大。爰參酌外國立法例，增訂本條，規定檢察官、司法警察官或司法警察對於情況急迫者，得逕行拘提。二、雖有事實足認為犯罪嫌疑重大，經被盤查而逃逸，但所犯顯係最重本刑為一年以下有期徒刑、拘役或專科罰金之罪者，犯罪情節輕微，尚無逕行拘提之必要，特於本條第一項第三款設但書之規定，以資限制。三、依本法第七十七條第三項規定，檢察官有簽發拘票之權，爰增訂本條第二項，規定由檢察官執行本條第一項逕行拘提時，得不用拘票；由司法警察官或司法警察執行時，於執行後，應即報請檢察官簽發拘票，如檢察官不簽發拘票時，應即將被拘提人釋放，以示慎重。四、為期司法警察官或司法警察有效執行本條第一項所定之逕行拘提，雖無搜索票，亦得逕行搜索身體、住宅或其他處所，爰於本條第三項明定準用第一百三十條及第一百三十一之一條之規定，俾資配合應用。
 
 * 89 執行拘提或逮捕，應注意被告之身體及名譽。
 
@@ -296,7 +316,9 @@
 
 * 149 在政府機關、軍營、軍艦或軍事上秘密處所內行搜索或扣押者，應通知該管長官或可為其代表之人在場。
 
-* 150 當事人及辯護人得於搜索或扣押時在場。但被告受拘禁，或認其在場於搜索或扣押有妨害者，不在此限。搜索或扣押時，如認有必要，得命被告在場。行搜索或扣押之日、時及處所，應通知前二項得在場之人。但有急迫情形時，不在此限。
+* 150 當事人及審判中之辯護人得於搜索或扣押時在場。但被告受拘禁，或認其在場於搜索或扣押有妨害者，不在此限。搜索或扣押時，如認有必要，得命被告在場。行搜索或扣押之日、時及處所，應通知前二項得在場之人。但有急迫情形時，不在此限。
+
+> 釋：一、依刑事訴訟法第二百四十五條規定，偵查不公開之，且偵查中關於搜索、扣押、勘驗之實施，在於蒐集證據，發現真實，必須迅速及時為之，如於搜索、扣押或勘驗時准許辯護人在場，不僅有損偵查不公開之原則，且亦有礙實施偵查之公務員迅速及時為之，足以影響發現真實，爰修正本條第一項，增列「審判中之」四字，以示辯護人僅得於審判中實施搜索、扣押或勘驗時在場（按依刑事訴訟法第二百十九條規定，本條之規定於勘驗準用之）。二、第二項及第三項均不修正。
 
 * 151 搜索或扣押暫時中止者，於必要時應將該處所閉鎖，並命人看守。
 
@@ -486,7 +508,9 @@
 
 * 244 自首向檢察官或司法警察官為之者，準用第二百四十二條之規定。
 
-* 245 偵查，不公開之。
+* 245 偵查，不公開之。被告或犯罪嫌疑人之辯護人，得於檢察官、司法警察官或司法警察訊問該被告或犯罪嫌疑人時在場。但有事實足認其在場有妨害國家機密或有湮滅、偽造、變造證據或勾串共犯或證人或妨害他人名譽之虞，或其行為不當足以影響偵查秩序者，得限制或禁止之。辯護人因偵查中執行職務所知悉之事項，不得洩漏。偵查中訊問被告或犯罪嫌疑人時，應將訊問之日、時及處所通知辯護人。但情形急迫者，不在此限。
+
+> 釋：一、第一項不修正。二、為使實施偵查程序之公務員對被告或犯罪嫌疑人合法實施偵訊，並確保被告或犯罪嫌疑人之合法權益，爰修正本條增列第二項，規定辯護人得於檢察官訊問被告或司法警察官、司法警察調查犯罪嫌疑人時在場。又為確保國家機密，及防止偽造、變造證據，或勾串共犯或證人，及維護他人之名譽與偵查程序之正常進行，如偵查中訊問被告時辯護人之到場毫無限制，亦非所宜，故設第二項但書之規定，以期周密。三、偵查中被告或犯罪嫌疑人之辯護人，雖得依本條第二項規定在場，惟其對於因執行職務所知悉之事項，應不得洩漏，以免妨害偵查之順利進行，爰於第三項明定辯護人之守密義務，以保偵查秘密。四、為使辯護人能於檢察官訊問被告時到場，故增列第四項規定。
 
 * 246 遇被告不能到場，或有其他必要情形，得就其所在訊問之。
 
@@ -506,7 +530,9 @@
 
 * 254 被告犯數罪時，其一罪已受重刑之確定判決，檢察官認為他罪雖行起訴，於應執行之刑無重大關係者，得為不起訴之處分。
 
-* 255 檢察官依前三條規定或因其他法定理由為不起訴之處分者，應制作處分書敘述不起訴之理由。不起訴處分書，應以正本送達於告訴人、被告及告發人。前項送達，自書記官接受處分書原本之日起，不得逾五日。
+* 255 檢察官依前三條規定或因其他法定理由為不起訴之處分者，應制作處分書敘述不起訴之理由。不起訴處分書，應以正本送達於告訴人、告發人、被告及其辯護人。前項送達，自書記官接受處分書原本之日起，不得逾五日。
+
+> 釋：一、第一項不修正。二、本法第二十七條修正後，被告如於偵查中選任辯護人，檢察官依規定制作之不起訴處分書，自應送達於辯護人，故修正本條第二項，揭示不起訴處分書應將正本送達於辯護人，以免實務上發生爭議。（起訴書之送達，因有刑事訴訟法第二六三條準用本條第二項第三項之規定，毋庸另行規定。）
 
 * 256 告訴人接受不起訴處分書後，得於七日內以書狀敘述不服之理由，經原檢察官向直接上級法院首席檢察官或檢察長聲請再議。但有第二百五十三條第二項之情形者，不得聲請再議。不起訴處分得聲請再議者，其再議期間及聲請再議之直接上級法院首席檢察官或檢察長，應記載於送達告訴人處分書正本。
 
