證券交易法 1983.4.29

--- a/行政-財政及金融/證券交易法.md
+++ b/行政-財政及金融/證券交易法.md
@@ -38,6 +38,14 @@
 
 * 18 經營證券投資信託事業、證券金融事業或證券投資顧問事業，應經主管機關之核准；其有關管理、監督事項，由行政院以命令定之。
 
+* 18.1 第三十八條、第三十九條及第六十六條之規定，於前條之事業準用之。
+
+> 釋：一、本條新增。二、為加強前條所定證券投資信託事業，證券金融事業及證券投資顧問事業之管理，本法第三十八條、第三十九條及第六十六條之規定，於各該事業有準用之必要，爰予明定，俾資依據。
+
+* 18.2 證券投資信託事業募集之證券投資信託基金，與證券投資信託事業及基金保管機構之自有財產，應分別獨立。證券投資信託事業及基金保管機構就其自有財產所負債務，其債權人不得對於基金資產請求扣押或行使其他權利。證券投資信託基金管理辦法，由財政部定之。
+
+> 釋：一、本條新增。二、證券投資信託事業所募集之證券投資信託基金，乃為該基金全體受益人之利益而存在，依一般信託法則，信託財產應屬於受益人，並非證券投資信託事業機構或基金保管機構所有。故為確保該項基金之獨立及排除證券投資信託事業或基金保管機構之債權人對之請求扣押或行使其他權利，爰參照日本（信託法第十五條、十六條、十七條）、韓國（證券投資信託事業法第廿六條、廿九條）等國立法例，增訂本條第一項。三、投資信託基金之管理，關係投資人權益頗大，但管理之事項頗為繁瑣，無法在本法中一一訂明，爰於第二項授權由財政部訂定管理辦法，以應實際需要。
+
 * 19 凡依本法所訂立之契約，均應以書面為之。
 
 * 20 募集、發行或買賣有價證券者，不得有虛偽、詐欺或其他足致他人誤信之行為。違反前項規定者，對於該有價證券之善意取得人因而所受之損害，應負賠償之責。
@@ -51,6 +59,10 @@
 * 24 公司依本法發行新股者，其以前未依本法發行之股份，視為已依本法發行。
 
 * 25 公開發行股票之公司於登記後，應即將其董事、監察人、經理人及持有股份達股份總額百分之五以上之股東，所持有之本公司股票種類、股數及票面金額，向主管機關申報並公告之。公司應於每月十五日以前，彙將前項股票持有人上月份股數變動之情形，向主管機關申報，必要時主管機關得命令其公告之。第一項之股票經設定質權者，出質人應即通知公司；公司應於其質權設定後五日內，將其出質情形，向主管機關申報並公告之。
+
+* 25.1 公開發行股票公司出席股東會使用委託書應予限制、取締或管理；其規則由主管機關定之。使用委託書違反前項所定規則者，其代理之表決權不予計算。
+
+> 釋：一、本條新增。二、授權主管機關訂定公開發行公司出席股東會使用委託書管理規則，就委託代理加以限制及管理，以防少數股東借徵求委託書而操縱股東會，爰增訂本條以為法律依據。
 
 * 26 凡依本法公開募集及發行有價證券之公司，其章程應分別訂明全體董事及監察人二者所持有記名股票之股份總額，各不得少於公司股份總額一定之成數。前項成數，由主管機關以命令定之。
 
@@ -76,7 +88,9 @@
 
 * 36 已依本法發行有價證券之公司，應於每營業年度終了，辦理決算後十五日內，將財務報告先經會計師查核簽證，並依法提經股東常會承認後，向主管機關申報並公告之。有價證券已在證券交易所上市之公司，除依前項之規定外，應於每半營業年度終了辦理結算後十五日內，將財務報告先經會計師查核簽證，並經董事會、監察人承認後向主管機關申報並公告之。前項之財務報告，應以抄本送證券交易所或證券商同業公會，以供公眾閱覽。第一項之股東常會，應於每營業年度終了後六個月內召集之。
 
-* 37 前條之財務報告，應備置於公司及其分支機構，以供股東及公司債權人之查閱或抄錄。
+* 37 會計師辦理前條財務報告之查核簽證，應經主管機關之核准；其準則由主管機關定之。會計師辦理前項簽證，發生錯誤或疏漏者，主管機關得視情節之輕重，為左列處分：一、警告。二、停止其二年以內辦理本法所定之簽證。三、撤銷簽證之核准。前條之財務報告，應備置於公司及其分支機構，以供股東及公司債權人之查閱或抄錄。
+
+> 釋：一、為加強發行公司管理，促進公司財務充分公開及忠實表達，首須健全會計師財務之簽證，強化其功能，特規定會計師查核簽證發行公司財務報告應經主管機關之許可，俾能擇優汰劣，提高簽證品質，爰授權主管機關訂定許可準則以資規範。會計師於辦理本法之簽證時，發生錯誤或疏漏者，主管機關並得按其情節予以處分，俾資警誡。爰增訂本條第一項、第二項及第三項。二、本條原規定事項，改列為第四項。
 
 * 38 主管機關為有價證券募集或發行之核准，因保護公益或投資人利益，對發行人、證券承銷商或其他關係人，得命令其提出參考或報告資料，並得直接檢查其有關書表、帳冊。有價證券發行後，主管機關得隨時命令發行人提出財務、業務報告或直接檢查財務、業務狀況。
 
@@ -320,7 +334,9 @@
 
 > 釋：一、本條第一項將第一、二款所定「業務計劃」修正為「業務計畫」。二、第二項配合證券管理委員會改隸，將「經濟部」修正為「財政部」，並作文字修正。三、發行有價證券之公司其信用之良窳事涉公眾利益，對其退票不應視之為一般公司行號，應作較嚴格之管理，以促使其信用健全，經營基礎穩固，以保障公眾投資之安全。
 
-* 157 發行公司董事、監察人、經理人或持有公司百分之五以上股權之股東，對公司之上市股票，於取得後六個月內再行賣出，或於賣出後六個月內再行買進，因而獲得利益者，公司得請求將其利益歸於公司。發行公司董事會或監察人不為公司行使前項請求權時，股東得以三十日之限期，請求董事或監察人行使之；逾期不行使時，請求之股東得為公司行使前項請求權。第一項之請求權，自獲得利益之日起二年間不行使而消滅。
+* 157 發行股票公司董事、監察人、經理人或持有公司百分之五以上股權之股東，對公司之上市股票，於取得後六個月內再行賣出，或於賣出後六個月內再行買進，因而獲得利益者，公司應請求將其利益歸於公司。發行股票公司董事會或監察人不為公司行使前項請求權時，股東得以三十日之限期，請求董事或監察人行使之；逾期不行使者，請求之股東得為公司請求前項請求權。董事或監察人不行使第一項之請求以致公司受損害時，對公司負連帶賠償之責。第一項之請求權，自獲得利益之日起二年間不行使而消滅。
+
+> 釋：一、本條第一項、第二項未修正。二、現行條文對董事會或監察人不行使第一項請求權致公司受有損害時應負責任如何，並未明文規定，爰參照公司法第二百二十六條規定意旨，增訂第三項使董事及監察人對公司負連帶賠償責任，以保障股東權益，並加強董事及監察人執行職務之責任。三、原第三項移列為第四項。
 
 * 158 證券經紀商接受於有價證券集中交易市場為買賣之受託契約，應依證券交易所所訂受託契約準則訂定之。前項受託契約準則之主要內容，由主管機關以命令定之。
 
