公職人員選舉罷免法 1983.6.28

--- a/行政-內政/公職人員選舉罷免法.md
+++ b/行政-內政/公職人員選舉罷免法.md
@@ -2,17 +2,25 @@
 
 * 2 本法所稱公職人員，指左列人員：一、中央公職人員：國民大會代表、立法院立法委員、監察院監察委員。二、地方公職人員：省（市）議會議員，縣（市）議會議員，鄉（鎮、市）民代表會代表，縣（市）長，鄉（鎮、市）長，村、里長。
 
-* 3 公職人員選舉，以普通、平等、直接及無記名單記投票法行之。但監察委員選舉，由省（市）議會議員以無記名投票法決定之。公職人員罷免，由原選舉區之選舉人以無記名單記投票法行之。
+* 3 公職人員選舉，以普通、平等、直接及無記名單記投票法行之。但監察委員選舉，由省（市）議會議員以無記名限制連記投票法行之，其連記人數以不超過應選名額二分之一為限。公職人員罷免，由原選舉區之選舉人以無記名投票法決定之。
 
-* 4 選舉人、候選人年齡之計算，以投票日前一日為準，並以戶籍登記簿為依據。居住期間之計算，以投票日前二十日為準，並以申報戶籍遷入登記之申請日期為準。重行選舉或重行投票者，均仍依原投票日計算。
+> 釋：一、監察委員選舉投票方法，六十九年選舉辦竣後，各方建議改進投票方法，為防止賄選，提高當選人之代表性，爰將監察委員選舉之投票方法改採限制連記法，其連記數以不超過應選名額二分之一為限。二、第二項未修正。
+
+* 4 選舉人、候選人年齡及居住期間之計算，均以算至投票日前一日為準，並以戶籍登記簿為依據。前項居住期間之起算，以申報戶籍遷入登記之申請日期為準。重行選舉或重行投票者均仍依原投票日計算。
+
+> 釋：依現行第四條之規定居住期間之計算「以投票日前二十日為準」，致現行第十五條第一項所定居住期間「繼續居住六個月以上」之計算，形成六個月二十日，頗多爭議，爰將居住期間之計算修正為「以投票日前一日為準」，並分列三項作文字修正，以杜紛擾。
 
 * 5 本法所規定各種期間之計算，依民法之規定。但期間之末日為例假日時，不予延長。
 
 * 6 公職人員選舉，中央、省（市）、縣（市）各設選舉委員會辦理之。
 
-* 7 中央公職人員及省（市）議員選舉，由中央選舉委員會主管，並指揮、監督各級選舉委員會辦理之。縣（市）議員及縣（市）長選舉，由省選舉委員會主管，並指揮、監督縣（市）選舉委員會辦理之。鄉（鎮、市）民代表及鄉（鎮、市）長選舉，由縣選舉委員會辦理之。村、里長選舉由各該市、縣選舉委員會辦理之。第二項至第四項之選舉，並受中央選舉委員會之監督。
+* 7 中央公職人員及省（市）議員選舉，由中央選舉委員會主管，並指揮、監督各級選舉委員會辦理之。縣（市）議員及縣（市）長選舉，由省選舉委員會主管，並指揮、監督縣（市）選舉委員會辦理之。鄉（鎮、市）民代表及鄉（鎮、市）長選舉，由縣選舉委員會辦理之。村、里長選舉，由各該直轄市、縣（市）選舉委員會辦理之。第二項至第四項之選舉，並受上級選舉委員會之監督。辦理選舉期間，直轄市、縣（市）選舉委員會並於鄉（鎮、市、區）設辦理選務單位。
 
-* 8 中央選舉委員會隸屬行政院，置委員九人至十五人，由行政院院長提請總統派充之，並指定一人為主任委員，其組織規程由行政院擬定，呈請 總統核定之。省（市）選舉委員會，置委員七人至十一人，由中央選舉委員會提請行政院院長派充之，並指定一人為主任委員。縣（市）選舉委員會，置委員五人至九人，由省選舉委員會遴報中央選舉委員會派充之，並指定一人為主任委員。省（市）、縣（市）選舉委員會組織規程，均由中央選舉委員會擬定，報請行政院核定之。各級選舉委員會委員均為無給職，任期三年。
+> 釋：一、第一項至第三項未修正。二、第四項文字修正。三、第五項將「中央」修正為「上級」俾兼顧省選舉委員會之監督職權。四、增列第六項，明定辦理選舉期間，直轄市、縣（市）選舉委員會並於鄉（鎮、市、區）設辦理選務單位，以應作業之需要。
+
+* 8 中央選舉委員會隸屬行政院，置委員九人至十五人，由行政院院長提請總統派充之，並指定一人為主任委員；其組織規程由行政院擬定，呈請總統核定之。省選舉委員會置委員五人至二十三人，直轄市選舉委員會置委員七人至十一人，均由中央選舉委員會提請行政院院長派充之，並指定一人為主任委員。縣（市）選舉委員會，置委員五人至九人，由省選舉委員會遴報中央選舉委員會派充之，並指定一人為主任委員。省（市）、縣（市）選舉委員會組織規程，均由中央選舉委員會擬定，報請行政院核定之。各級選舉委員會委員均為無給職、任期三年。但因職務關係派充者，得依其職務異動而改派之。
+
+> 釋：一、第一項未修正。二、為取消中央、省巡迴監察員，其監察工作由中央、省選舉委員會委員及有關幕僚單位負責辦理，並顧及省選舉委員會選監業務之需要，爰將第二項所定省選舉委員會委員名額修正為「五人至二十三人」，以應實際需要。至中央及直轄市、縣（市）選舉委員會委員名額則維持現制。三、第三項、第四項未修正。四、第五項之後增列但書規定，俾應實際需要。
 
 * 9 公職人員罷免，由各級選舉委員會辦理，並準用第七條之規定。
 
@@ -20,13 +28,17 @@
 
 * 11 各級選舉委員會分別掌理左列事項：一、選舉、罷免公告事項。二、選舉、罷免事務進行程序及計畫事項。三、候選人資格之審定事項。四、選舉宣導之策劃事項。五、選舉、罷免之監察事項。六、投票所、開票所之設置及管理事理。七、選舉、罷免結果之審查事項。八、當選證書之製發事項。九、其他有關選舉、罷免事項。
 
-* 12 中央、省選舉委員會各置巡迴監察人員若干人，並指定一人為召集人；直轄市、縣（市）選舉委員會各設監察小組，置小組委員九人至十五人，並指定一人為召集人。分別執行左列事項：一、候選人、助選員、罷免案提議人、被罷免人違反選舉、罷免法規之監察事項。二、選舉人、罷免案投票人違反選舉、罷免法規之監察事項。三、辦理選舉、罷免事務人員違法之監察事項。四、其他有關選舉、罷免監察事項。巡迴監察人員及監察小組委員，由各該選舉委員會於辦理選舉、罷免期間，就具有選舉權之公正人士遴聘之。
+* 12 中央選舉委員會置巡迴監察員若干人，由中央選舉委員會遴選具有選舉權之公正人士，報請行政院院長聘任，並指定一人為召集人；直轄市、縣（市）選舉委員會各設監察小組，置小組委員若干人，由直轄市選舉委員會及縣（市）選舉委員會，分別遴選具有選舉權之公正人士，報請中央選舉委員會及省選舉委員會聘任，並各指定一人為召集人，執行左列事項：一、候選人、助選員、罷免案提議人、被罷免人違反選舉、罷免法規之監察事項。二、選舉人、罷免案投票人違反選舉、罷免法規之監察事項。三、辦理選舉、罷免事務人員違法之監察事項。四、其他有關選舉、罷免監察事項。前項巡迴監察員、監察小組委員，均為無給職。其任期及人數於中央、直轄市、縣（市）選舉委員會組織規程規定之。直轄市、縣（市）選舉委員會，得遴聘具有選舉權之公正人士為政見發表會監察員，執行有關政見發表之監察事項。各級選舉委員會執行監察職務準則，由中央選舉委員會定之。
+
+> 釋：一、查現行選舉監察制度，中央、省選舉委員會各置巡迴監察員，直轄市、縣（市）選舉委員會則設監察小組，分別執行監察事項，惟經歷次增額中央民意代表選舉及地方公職人員選舉之經驗，對於監察事項之執行，實際均有賴監察小組，中央、省巡迴監察員多僅巡迴督導查察；為發揮「選監合一」精神，並強化直轄市、縣（市）選舉委員會監察小組之監察功能，爰將現行第十二條第一項所定監察制度作左列修正：（一）中央、省選舉委員會取消巡迴監察員之設置，其「選舉監察事項」由中央、省選舉委員會委員及設置之幕僚單位負責辦理選舉監察工作之策劃、指揮與督導事宜。（二）直轄市、縣（市）選舉委員會各設監察小組，為常設單位，置委員若干人，由直轄市、縣（市）選舉委員會分別遴報中央、省選舉委員會聘任之，並各指定一人為召集人；惟小組委員人數，於非選舉期間，將僅遴聘少數委員，負責監察工作之研討與改進，俾於選舉期間提高監察小組之監察功能。二、第二項係配合第一項酌作文字修正。三、第三項係就現行本法施行細則第五十一條規定文字修正增列，俾政見發表會監察員具有法律地位。四、增訂第四項授權中央選舉委員會訂定各級選舉委員會執行監察職務準則，俾利監察事項之執行。
 
 * 13 各級選舉委員會之預算，分別由中央、省（市）、縣（市）政府依法編列。
 
 * 14 中華民國國民，年滿二十歲，無左列情事之一者，有選舉權：一、褫奪公權尚未復權者。二、受禁治產宣告尚未撤銷者。
 
-* 15 有選舉權人在其本籍或在各該選舉區繼續居住六個月以上者，為公職人員區域選舉各該選舉區之選舉人。前項本籍如係新設定者，仍應於該選舉區繼續居住六個月以上。
+* 15 有選舉權人在其本籍或在各該選舉區繼續居住六個月以上者，為公職人員區域選舉各該選舉區之選舉人。前項本籍，不適用於鄉（鎮、市）民代表、鄉（鎮、市）長、村、里長之選舉。第一項之居住期間，於直轄市、縣（市）、鄉（鎮、市）地方公職人員之選舉，在其行政區域劃分選舉區者，仍以行政區域為範圍計算之。但於選舉區公告後，遷入各該選舉區者，無選舉投票權。
+
+> 釋：一、第一項未修正。二、按戶籍法於六十三年七月十七日修正公布後其第二十條第一項第四款經明定：「由他縣遷入居住六個月以上有久住之意思者」應為設籍及除籍之登記，現行條文第二項已無規定必要，爰予刪除。三、查戶籍法第六條規定：「中華民國人民之本籍以其所屬之省及縣為依據。」本法施行細則第七條第一項亦有明文。於鄉（鎮、市）之選舉，當然不得以本籍之規定取得選舉權，爰修正增列第二項規定如上。四、查現行法第十五條對居住期間，規定以選舉區為範圍，按地方民意代表之選舉，向以行政區域為計算居住期間之範圍，故增列第三項前段。惟為維護選舉秩序與公平競爭，並增列但書規定。
 
 * 16 生活習慣特殊國民公職人員選舉，以生活習慣特殊並具有前條資格之有選舉權人為選舉人。職業團體、婦女團體公職人員選舉，以入會滿六個月以上並具有前條資格之有選舉權人為選舉人。監察委員選舉，以省（市）議會議員為選舉人。
 
@@ -60,55 +72,101 @@
 
 * 31 選舉人年滿二十三歲得登記為公職人員候選人。但監察委員候選人須年滿三十五歲；縣（市）長候選人須年滿三十歲；鄉（鎮、市）長候選人須年滿二十五歲。回復中華民國國籍滿三年，或因歸化取得中華民國國籍滿十年者，得依前項規定，申請登記為候選人。
 
-* 32 登記為公職人員選舉候選人，除由農民團體、漁民團體、工人團體選出之國民大會代表、立法委員，村、里長候選人外，應具備左列之學經歷：一、國民大會代表、立法委員、監察委員候選人須高級中等以上學校畢業或普通考試以上考試及格或曾任省（市）議員一任以上。二、省（市）議員候選人須高級中等以上學校畢業或普通考試以上考試及格或曾任縣（市）議員一任以上。三、縣（市）議員候選人須國民中學以上學校畢業或丁等特種考試以上考試及格或曾任鄉（鎮、市）民代表一任以上。四、鄉（鎮、市）民代表候選人須國民小學以上學校畢業或曾任村、里長一任以上。五、縣（市）長候選人須專科以上學校畢業或高等考試以上考試及格，具有行政工作經驗二年以上，或曾任中央公職人員、省（市）議員、縣（市）議員、鄉（鎮、市）長一任以上。六、鄉（鎮、市）長候選人須高級中等以上學校畢業或普通考試以上考試及格，具有行政工作經驗二年以上，或曾任縣（市）議員、鄉（鎮、市）民代表村、里長一任以上。前項各款學、經歷之認定，以檢覈行之。公職候選人檢覈規則由考試院定之。本法施行前經公職候選人資格檢覈合格者，得不再經檢覈，取得各該公職候選人資格。
+* 32 登記為候選人，應具備左列之學、經歷：一、國民大會代表、立法委員、監察委員候選人須高級中等以上學校畢業，或普通考試以上考試及格，或曾任省（市）議員以上公職一任以上。二、省（市）議員候選人須高級中等以上學校畢業，或普通考試以上考試及格，或曾任縣（市）議員以上公職一任以上。三、縣（市）議員候選人須國民中學以上學校畢業，或丁等特種考試以上考試及格，或曾任鄉（鎮、市）民代表以上公職一任以上。四、鄉（鎮、市）民代表候選人須國民中學以上學校畢業，或丁等特種考試以上考試及格，或曾任鄉（鎮、市）民代表以上公職、村、里長一任以上。五、縣（市）長候選人須專科以上學校畢業或高等考試以上考試及格，並具有行政工作經驗二年以上或曾任縣（市）議員以上之公職二年以上。六、鄉（鎮、市）長候選人須高級中等以上學校畢業或普通考試以上考試及格，並具有行政工作經驗二年以上或曾任鄉（鎮、市）民代表以上之公職二年以上。七、村、里長候選人須國民中學以上學校畢業，或丁等特種考試以上考試及格，或曾任村、里長一任以上。前項各款學、經歷之認定，以檢覈行之。公職候選人檢覈規則由考試院定之。本法施行前，經公職候選人資格檢覈合格者，得不再經檢覈，取得各該公職候選人資格。曾經第一項第一款之一種中央公職人員候選人資格檢覈合格者，取得同款他種中央公職人員及第二款至第四款之候選人資格，曾經第二款公職候選人資格檢覈合格者，取得第三款、第四款候選人資格；曾經第三款公職候選人資格檢覈合格者；取得第四款候選人資格；曾經第五款公職候選人資格檢覈合格者，取得第六款、第七款候選人資格；曾經第六款公職候選人資格檢覈合格者，取得第七款候選人資格。
+
+> 釋：一、規定各種公職人員候選人，均須具備學、經歷，且須經檢覈合格，並將鄉（鎮、市）民代表、村、里長候選人學歷規定為「國民中學以上學校畢業或丁等特種考試以上考試及格」。二、第一項第一款至第四款增訂曾任同級以上公職一任以上者得登記為候選人之規定，以應需要。三、修正第五款明定縣（市）長候選人除須具備學歷外，並須具有行政工作經驗二年以上，或曾任縣（市）議員以上之公職二年以上，始得登記為縣（市）長候選人。四、修正第六款明定鄉（鎮、市）長候選人除須具備學歷外，並須具有行政工作經驗二年以上，或曾任鄉（鎮、市）民代表以上公職二年以上，始得登記為鄉（鎮、市）長候選人。五、第二項、第三項未修正。六、為使取得較高級公職人員候選人資格檢覈合格者，不須再經檢覈，逕行取得同性質次一職位之公職人員候選資格特增訂第四項規定。
 
 * 33 二種以上公職人員選舉同時辦理時，申請登記為候選人者，以登記一種為限。同種公職人員選舉具有二個以上之候選人資格者，以登記一個為限。同時為二種或二個以上候選人登記時，其登記無效。
 
-* 34 有左列情事之一者，不得申請登記為候選人：一、曾因內亂、外患行為犯罪，經判刑確定者。二、曾因貪污行為犯罪，經判刑確定者。三、犯前兩款以外之罪，判處有期徒刑以上之刑確定尚未執行或執行未畢者。但受緩刑者，不在此限。四、受保安處分宣告確定，尚未執行或執行未畢者。五、受破產宣告確定，尚未復權者。六、依法停止任用或受休職處分，尚未期滿者。七、褫奪公權，尚未復權者。八、受禁治產宣告，尚未撤銷者。
+* 34 有左列情事之一者，不得登記為候選人：一、曾因內亂、外患行為犯罪，經判刑確定者。二、曾因貪汙行為犯罪，經判刑確定者。三、曾犯第八十七條至第九十一條之罪或刑法第一百四十二條、第一百四十四條之罪經判刑確定者。四、犯前三款以外之罪，判處有期徒刑以上之刑確定，尚未執行或執行未畢者。但受緩刑宣告，不在此限。五、受保安處分宣告確定，尚未執行或執行未畢者。六、受破產宣告確定，尚未復權者。七、依法停止任用或受休職處分，尚未期滿者。八、褫奪公權，尚未復權者。九、受禁治產宣告，尚未撤銷者。
+
+> 釋：一、第一款、第二款未修正。二、為防止賄選，端正選風，特增列第三款。三、第四款係就現行第三款文字修正移列。四、據建議並參酌以往地方選舉法規規定，增列第五款「通緝有案尚未撤銷者」。五、第六款至第十款係由現行第四款至第八款移列。
 
 * 35 左列人員不得申請登記為候選人：一、現役軍人或警察。二、現在學校肄業學生。三、辦理選舉事務人員。前項第一款之現役軍人，屬於後備軍人或國民兵應召者，在應召未入營前，或係教育、勤務及點閱召集，均不受限制。現任公務人員不得在其任所所在地，申請登記為國民大會代表候選人。
 
-* 36 候選人名單公告後，經發現候選人在公告前或投票前有左列情事之一者，投票前由選舉委員會撤銷其候選人登記；當選後由選舉委員會向法院提起當選無效之訴：一、有第三十四條或第三十五條第一項、第三項之情事者。二、候選人檢覈合格資格被撤銷者。三、依第八十五條第一項規定不得登記為候選人者。
+* 36 候選人名單公告後，經發現候選人在公告前或投票前有左列情事之一者，投票前由選舉委員會撤銷其候選人登記；當選後依第一百零三條之一規定提起當選無效之訴：一、候選人資格不合第三十一條規定或候選人檢覈合格資格被撤銷者。二、有第三十四條或第三十五條第一項、第三項之情事者。三、依第八十五條第一項規定不得登記為候選人者。
+
+> 釋：一、本條將前段所定：「當選後由選舉委員會向法院提起當選無效之訴」修正為「當選後依第一百零三條之一規定提起無效之訴。」俾與本法「選舉訴訟」之規定相配合。二、將第二款改列為第一款並增列「候選人資格不合第三十一條規定或」等字，俾候選人資格不合積極要件者，亦得依本條規定處理。三、第三款未修正。
 
 * 37 經申請登記為候選人者，於登記期間截止後，不得撤回其候選人登記；在登記期間截止前經撤回登記者，不得再申請同一種類公職人員候選人登記。
 
-* 38 候選人於申請登記之同時，應繳納保證金；其數額由選舉委員會視實際需要預計，先期公告。但監察委員、村、里長候選人得免繳納。前項保證金應於公告當選人名單後十日內發還。但得票不足各該選舉區應選出名額除該選舉區選舉人總數所得商數百分之十者，不予發還。
+* 38 登記為侯選人時應繳納保證金；其數額由選舉委員會視實際需要預計，先期公告。但村、里長侯選人得免繳納。前項保證金應於公告當選人名單後十日內發還。但監察委員選舉候選人為零票；其他選舉未當選之候選人，得票不足各該選舉區應選出名額除該選舉區選舉人總數所得商數百分之十者，不予發還。
+
+> 釋：一、第一項刪除監察委員得免繳保證金之規定，以防止候選人濫行登記。二、第二項增加有關監察委員得所繳保證金不予發還標準之規定。並將本法施行細則第三十九條第二項規定予以納入。
 
 * 39 公職人員選舉，其選舉區依左列規定：一、國民大會代表由直轄市及縣（市）選出者，以其行政區域為選舉區。二、立法委員由省（市）選出者，以其行政區域為選舉區，並得在其行政區域內劃分選舉區。三、監察委員由省（市）議會選出者，以省（市）議會為選舉區。四、省議員由縣（市）選出者，以其行政區域為選舉區；直轄市議員選舉以其行政區域為選舉區，並得在其行政區域內劃分選舉區。五、縣（市）議員，鄉（鎮、市）民代表選舉以其行政區域為選舉區，並得各在其行政區域內劃分選舉區。六、縣（市）長，鄉（鎮、市）長，村里長選舉各依其行政區域為選舉區。
 
 * 40 國民大會代表、立法委員由職業團體選出者，以同類職業團體為選舉區。國民大會代表由婦女團體選出者，以省（市）婦女團體為選舉區。
 
-* 41 國民大會代表、立法委員，省（市）議員，縣（市）議員，鄉（鎮、市）民代表由生活習慣特殊國民選出者，其選舉區依左列規定：一、國民大會代表、立法委員，省（市）議員由生活習慣特殊國民選出者，以山胞為選舉區，並得劃分為平地山胞、山地山胞選舉區。二、縣（市）議員，鄉（鎮、市）民代表由生活習慣特殊國民選出者，以縣（市），鄉（鎮、市）行政區域內之山胞劃分選舉區。
+* 41 國民大會代表、立法委員、省（市）議員、縣（市）議員、鄉（鎮、市）民代表，由生活習慣特殊國民選出者，其選舉區依左列規定：一、國民大會代表、立法委員，由生活習慣特殊國民選出者，以山胞為選舉區，並得劃分為平民山胞、山地山胞選舉區。二、省（市）議員、縣（市）議員、鄉（鎮、市）民代表，由生活習慣特殊國民選出者，以省（市）、縣（市）、鄉（鎮、市）行政區域內之山胞為選舉區，並得按平地山胞、山地山胞或在其行政區域內劃分選舉區。
 
-* 42 第三十九條第二款、第四款及第四十一條第一款選舉區之劃分，由中央選舉委員會為之；第三十九條第五款及第四十一條第二款選舉區之劃分，由各該選舉委員會為之；並應與選舉公告同時公告。
+> 釋：一、為便於山胞選出之省（市）議員，在省（市）行政區域內劃分選舉區，分區選舉，將現行條文第一款之省（市）議員選舉區劃分之規定，移列第二款。二、第二款後段酌作修正，俾山胞選出之省（市）議員、縣（市）議員、鄉（鎮、市）民代表，其選舉區之劃分較具彈性。
 
-* 43 選舉委員會應依左列規定期間發布各種公告：一、選舉公告，須載明選舉種類、名額、選舉區之劃分、投標日期及投票起、止時間。並應於公職人員任期或規定之日期屆滿前二個月至四個月間發布之。二、選舉人登記，應於投票日二十五日前公告，其登記期間不得少於十日。但鄉（鎮、市）民代表，鄉（鎮、市）長、村、里長之選舉不得少於五日。三、選舉人名冊，應於投票日十五日前公告，其公告期間不得少於五日。四、候選人名單，應於競選活動開始前三日公告。五、選舉人人數，應於投票日三日前公告。六、當選人名單，應於投票日後七日內公告。
+* 42 第三十九條第二款、第四款及第四十一條第一款、第二款之省（市）議員選舉選舉區，由中央選舉委員會劃分之；第三十九條第五款及第四十一條第二款之縣（市）議員、鄉（鎮、市）民代表選舉選舉區，由各該選舉委員會劃分之，並應於發布選舉公告時公告。但選舉區有變更時，應於公職人員任期或規定之日期屆滿六個月前發布之。
 
-* 44 公職人員選舉，應於各該公職人員任期或規定之日期屆滿二十日前完成選舉投票。
+> 釋：一、配合第四十一條將原列於第一款之省（市）議員山胞之選舉修正改列於第二款之修正，於「第四十一條第一款」之下，增加「暨第二款省（市）議員選舉」一段，並酌作文字修正。二、選舉區之劃分，對候選人有切身利害，因此選舉區若有所變更時，公告日期亦不予改變，則時間短促，對候選人影響甚大，為適應實際需要，爰於條末增加但書。
 
-* 45 公職人員選舉，候選人競選活動期間依左列規定：一、國民大會代表、立法委員為十五天。二、省（市）議員，縣（市）議員，縣（市）長為十天。三、鄉（鎮、市）民代表，鄉（鎮、市）長為五天。四、村、里長為三天。監察委員候選人以參加選舉委員會舉辦之競選活動為限。第一項期間，以投票日前一日向前推算。其每日競選活動之起、止時間，由選舉委員會定之。
+* 43 選舉委員會應依左列規定期間發布各種公告：一、選舉公告，須載明選舉種類、名額、選舉區之劃分、投票日期及投票起、止時間。並應於公職人員任期或規定之日期屆滿四十日前發布之。但重行選舉、重行投票或補選之公告日期不在此限。二、候選人登記，應於投票日二十日前公告，其登記期間不得少於五日。但鄉（鎮、市）民代表、鄉（鎮、市）長、村、里長之選舉不得少於三日。三、選舉人名冊，應於投票日十五日前公告，其公告期間不得少於五日。四、候選人名單，應於競選活動開始前一日公告。五、選舉人人數，應於投票日三日前公告。六、當選人名單，應於投票日後七日內公告。前項第二款候選人登記期間截止後，如有選舉區無人登記時，得就無人登記之選舉區，公告辦理第二次候選人登記，其登記期間，不得少於二日。
 
-* 46 候選人，除監察委員選舉外，得設立競選辦事處，並置助選員；其設置辦法，由中央選舉委員會定之。
+> 釋：一、第一款將選舉公告發布日期由任期或規定之日期屆滿前「二個月至四個月間」發布，修正為「四十日前」以縮短選舉程序進行期間。另鑒於重行選舉、重行投票或補選皆係因法定原因而產生，其公告日期事實上無法限制，爰增訂但書規定，以求明確。二、第二款配合縮短選舉程序進行期間，將候選人登記之公告時間與期間酌予縮短。三、第三款未修正。四、第四款將候選人名單公告期間競選活動開始「前三日」修正為「前一日」，以縮短選舉程序進行期間。五、第五款、第六款未修正。六、為因應鄉（鎮、市）民代表、村、里長選舉之實際需要，參採地方自治法規中有關村、里長選舉無人登記時，得公告辦理第二次候選人登記之規定增列為第二項。
+
+* 44 公職人員選舉，應於各該公職人員任期或規定之日期屆滿十日前完成選舉投票。但重行選舉、重行投票或補選之投票完成日期不在此限。
+
+> 釋：一、本條將投票完成日期由任期或規定之日期屆滿「二十日前」修正為「十日前」，以縮短選舉程序進行期間。二、重行選舉、重行投票或補選皆係因法定原因而產生，其投票完成日期事實上無法限期完成爰增訂但書規定如上。
+
+* 45 公職人員選舉，候選人競選活動期間依左列規定：一、國民大會代表、立法委員、監察委員為十五天。二、省（市）議員、縣（市）議員、縣（市）長為十天。三、鄉（鎮、市）民代表、鄉（鎮、市）長為五天。四、村里長為三天。前項期間，以投票日前一日向前推算，其每日競選活動之起、止時間，由選舉委員會定之。
+
+> 釋：一、為放寬監察委員競選活動之限制，爰於第一項第一款增列「監察委員」之競選活動期間為十五天並將第二項刪除。二、第二項係就現行第三項文字修正移列。
+
+* 45.1 各種公職人員競選經費最高限額，應由選舉委員會訂定，並於發布選舉公告之日同時公告之。前項競選經費最高限額，應斟酌公職人員選舉種類、法定競選活動項目訂定基本金額；並以選舉區應選名額除選舉區人口總數，乘基本金額及物價指數計算之。其計算公式如左：競選經費最高限額＝（選舉區人口總數÷選舉區應選名額）×基本金額×物價指數
+
+> 釋：一、本條新增。二、本條規定由選舉委員會依各種因素訂定公職人員選舉競選經費最高限額，提倡節約，端正選舉風氣，並開公平參與競選之門。三、另鑒於鄉（鎮、市）民代表、村、里長選舉為基層選舉，選舉區範圍狹小，花費較少，尚無訂定最高限額必要，爰於第一項但書明定其旨。
+
+* 45.2 候選人不得接受左列競選經費之捐助：一、外國團體、法人或個人之捐助。二、同一種選舉其他侯選人之捐助。
+
+> 釋：一、本條新增。二、為防止（一）外國透過金錢干預本國選舉；（二）候選人為他日政治上之利益變相助選，爰增列不得接受競選經費捐助。
+
+* 45.3 候選人應設競選經費收支帳簿，並由其本人或指定人員負責記帳保管，以備查考。前項候選人應於投票日後三十日內，檢同競選收支結算申報表，向選舉委員會申報競選經費收支結算，並應由本人或指定記帳人員簽章負責。選舉委員會對前項所申報競選經費之支出，有事實足認其有不實者，得要求檢送支出憑據或證明文件，以憑查核。競選經費支出憑據、證明文件等，應於申報後保管六個月。但於發生訴訟時，應保管至判決確定後三個月。競選經費查核準則，由中央選舉委員會定之。
+
+> 釋：一、本條新增。二、第一項規定候選人應設置競選經費收支帳簿，以備查考。三、第二項規定第一項所指候選人應向選舉委員會申報競選經費結算限期及應繳交之報表、帳簿。四、第三項規定選舉委員會對於競選經費之支出有不實者，得要求檢送有關支出憑據或證明文件。五、第四項規定保存有關競選經費收支憑據、證明文件等之期限，俾利查核。
+
+* 46 競選活動之項目如左：一、設競選辦事處、置助選員。二、舉辦政見發表會。三、印發名片、傳單。四、使用宣傳車輛及擴音器。五、訪問選舉區內選民。前項第一款、第四款於監察委員選舉不適用之。候選人競選辦事處及助選員設置辦法，由中央選舉委員會定之。
+
+> 釋：一、本條係就現行第四十六條及第四十八條合併修正。二、第一項係就現行第四十八條移列並作左列修正：（一）增列「設競選辦事處、置助選員」一款為競選活動項目之一，並列為第一款，原第一款改列為第二款。（二）原第二款「印發選舉公報」，因係由選務機關辦理，且現行第五十條已有明定，故予刪除。三、增列第二項，規定監察委員候選人不得設競選辦事處、置助選員、懸掛或豎立標語及使用宣傳車輛、播音器。
 
 * 47 左列人員不得擔任助選員：一、已登記之候選人。二、公務人員。三、有第三十四條、第三十五條第一項各款情事之一者。一人不得擔任二以上候選人之助選員。
 
-* 48 競選活動之項目如左：一、舉辦政見發表會。二、印發選舉公報。三、印發名片或傳單。四、懸掛標語。五、使用宣傳車輛及播音器。六、訪問選舉區內選民。
+* 48 （刪除）
 
-* 49 政見發表會分公辦政見發表會及自辦政見發表會。自辦政見發表會之期間在先，公辦政見發表會之期間在後。公辦政見發表會期間不得多於自辦政見發表會期間。公辦政見發表會，由選舉委員會於公辦政見發表會期間內舉辦，候選人應親自到場發表政見。自辦政見發表會，由候選人於自辦政見發表會期間內舉辦，每日不得超過六場，每場以兩小時為限，候選人應親自到場，除候選人及其助選員外，他人不得在場演講；其時間、地點應於舉辦三日前函報選舉委員會核准。舉辦政見發表時，選舉委員會得派員到場監察。
+> 釋：本條刪除。與現行第四十六條合併。
+
+* 49 政見發表會除監察委員選舉由選舉委員會主辦外，分公辦政見發表會及自辦政見發表會。自辦政見發表會之期間在先，公辦政見發表會之期間在後。公辦政見發表會期間不得多於自辦政見發表會期間。公辦政見發表會，由選舉委員會於公辦政見發表會期間內舉辦，候選人應親自到場發表政見。但村、里長選舉，公辦政見發表會得由選舉委員會視實際情形辦理或免辦。自辦政見發表會，候選人應於自辦政見發表會期間內舉辦，每日不得超過六場，每場以兩小時為限，候選人應親自到場，除候選人及其助選員外，他人不得在場演講；其時間、地點應於舉辦二日前函請選舉委員會核准。舉辦政見發表會時，選舉委員會得派監察人員到場監察。
+
+> 釋：一、第一項係將現行第四十五條第二項所定監察委員候選人不得舉辦自辦政見發表會之規定予以納入。二、村、里長選舉為基層之選舉，其選舉區範圍狹小，候選人之為人處事已為選民所熟悉。且同額競選時，實無辦理公辦政見會之必要。爰於第二項增列但書規定，俾符實際需要。三、為使候選人有較充裕之時間以安排自辦政見發表會之時間及地點起見，爰將「三日」改為「二日」。四、第四項於首句「舉辦政見發表」下加一「會」字俾求明確。
 
 * 50 選舉委員會應彙集各候選人之政見、號次、相片、姓名、年齡、性別、本籍、黨籍、學歷、經歷、職業、住址及選舉投票等有關規定，編印選舉公報，於投票日二日前分送選舉區內各戶，並分別張貼適當地點。前項候選人政見及個人資料，候選人應於申請登記為候選人時，一併繳送選舉委員會。候選人政見內容，如有違背第五十四條規定者，選舉委員會應通知候選人限期自行修改；不修改者，對違背規定部分不予刊登公報；候選人個人資料不實者亦同。選舉委員會得視實際需要，透過大眾傳播工具，辦理其他競選活動。
 
-* 51 候選人印發名片或傳單，應註明印刷所之名稱及地址。候選人製作標語，其懸掛或豎立地點不得妨害交通。名片、傳單或標語，如張貼時，候選人應於投票日後十日內自行清除；不清除者，應負擔代執行之費用。懸掛或豎立之標語，依前項規定辦理。
+* 51 候選人印發傳單，應親自簽名。名片、傳單除由選舉委員會提供或指定地點外，不得張貼。前項名片、傳單之規格，由中央選舉委員會規定之。
 
-* 52 候選人為競選活動使用宣傳車輛之數量，每人不得超過八輛。但以直轄市或縣（市）為其選舉區者，每人不得超過四輛，以鄉（鎮、市）為其選舉區者，每人不得超過二輛。前項宣傳車輛，應懸掛選舉委員會製發之旗幟。候選人為競選活動使用之擴音器，以裝置於宣傳車輛、自辦政見發表會場或競選辦事處為限。
+> 釋：一、現行第一項所定「名片」與一般個人使用「名片」不易區別；為防止印發惡意攻訐之無頭傳單，宜由候選人親自簽名，以保障候選人之權益。二、為維護選舉秩序及環境清潔，爰於第二項明定名片、傳單及標語不得張貼。三、為使名片、傳單整齊劃一，以便張貼，爰增訂第三項。
 
-* 53 候選人訪問選民，不得妨害居民之安寧。
+* 52 候選人為競選活動使用宣傳車輛之數量，每人不得超過五輛。但以直轄市或縣（市）為其選舉區者，每人不得超過三輛，以鄉（鎮、市）為其選舉區者，每人不得超過二輛。前項宣傳車輛，應懸掛選舉委員會製發之旗幟。候選人為競選活動使用之擴音器，以裝置於宣傳車輛、自辦政見發表會場或競選辦事處為限，並不得妨害其他候選人發表政見。
+
+> 釋：一、為節省競選費用，並符實際需要，爰將第一項所定候選人競選活動使用宣傳車輛之數量酌予減少。二、第二項未修正。三、現行第五十五條第八款規定，移列本條第三項之末，並酌作修正。
+
+* 53 （刪除）
+
+> 釋：為切合實際，並免形同具文，爰將本條刪除。
 
 * 54 候選人或其助選員競選言論，不得有左列情事：一、煽惑他人犯內亂罪或外患罪。二、煽惑他人以暴動破壞社會秩序。三、觸犯其他刑事法律規定之罪。
 
-* 55 候選人或其助選員競選活動，不得有左列情事：一、競選辦事處或助選員之設置，不合法令規定。二、於規定期間或每日起、止時間之外從事競選活動。三、自辦政見發表會外，另行公開演講。四、結眾遊行。五、競選活動超越各該選舉區。六、從事第四十八條規定項目以外之競選活動。七、燃放鞭炮，影響社區安寧。八、以擴音器呼叫，妨害其他候選人發表政見。
+* 55 候選人或其助選員競選活動，不得有左列情事：一、在政見發表會外，另行公開演講。二、競選辦事處或助選員之設置，不合法令規定。三、於規定期間或每日起、止時間之外從事競選活動。四、聯合舉辦自辦政見發表會。五、結眾遊行。六、超越各該選舉區，從事競選活動。七、發起選舉人簽名或利用大眾傳播工具刊登廣告從事競選活動。八、從事第四十六條規定項目以外之競選活動。九、燃放鞭炮。
 
-* 56 非助選員不得公開演講為候選人宣傳。
+> 釋：一、第一款係就現行條文第三款修正移列。二、現行條文第一款、第二款，依次遞改為第二款、第三款。三、為維護選舉秩序，增列「聯合舉辦自辦政見發表會」為第四款。四、原第四款改列為第五款。五、原第五款改為第六款並酌作文字修正。六、原第七款刪除，以切合實際，並免形同具文。七、為節省選舉經費，並維護選舉程序，爰增列第七款規定如上。八、原第八款刪除，移列第五十二條第三項。九、原第六款改為第八款。十、為免在競選期間，燃放鞭炮影響治安及環境清潔，爰增列第九款。
+
+* 56 競選活動期間，除候選人及其助選員依本法規定從事競選活動外，任何人不得有左列之行為：一、公開演講為候選人宣傳。二、自行製作或張貼傳單、標語、壁報為候選人宣傳。三、以未經許可為競選活動使用之宣傳車輛或擴音器為候選人宣傳。四、結眾遊行為候選人宣傳。五、發動選舉人簽名或利用大眾傳播工具刊登廣告為候選人宣傳。六、為候選人燃放鞭炮。
+
+> 釋：一、本條係就現行第五十六條修正。二、鑒於現行法對於「非助選員」除明定不得公開演講為候選人宣傳外，別無限制，以致非助選員之行為影響選舉秩序之維持，爰依各方建議修正增列競選活動期間從事競選活動之限制。三、配合修正條文第五十五條之修正，增列「燃放鞭炮」，俾資周妥。
 
 * 57 公職人員選舉，應視選舉區廣狹及選舉人分布情形，就機關、學校、公共場所或其他適當處所，分設投票所。監察委員選舉，於省（市）議會設投票所。投票所於投票完畢後，即改為開票所，當眾唱名開票，開票完畢，開票所主任管理員與主任監察員即以書面宣布開票結果。
 
@@ -118,9 +176,13 @@
 
 * 60 選舉票，應由選舉委員會按選舉區印製分發應用。選舉票上應刊印各候選人之號次、姓名及相片。前項選舉票，應於投票日前一日交各該投票所主任管理員會同主任監察員當眾點清。
 
-* 61 選舉之投票，由選舉人於選舉票圈選欄上，以選舉委員會製備之圈選工具圈選一人。
+* 61 選舉之投票，由選舉人於選舉票圈選欄上，以選舉委員會製備之圈選工具圈選一人。但監察委員選舉，其圈選人數以不超過第三條第一項規定之連記人數為準。選舉人圈選後不得將圈選內容出示他人。
 
-* 62 選舉票有左列情事之一者無效：一、不用選舉委員會製發之選舉票者。二、圈二人以上者。三、所圈地位不能辨別為何人者。四、圈後加以塗改者。五、簽名、蓋章、按指印、加入任何文字或劃寫符號者。六、將選舉票撕破致不完整者。七、將選舉票污染致不能辨別所圈為何人者。八、不加圈完全空白者。九、不用選舉委員會製備之圈選工具者。前項無效票，應由開票所主任管理員會同主任監察員認定；認定有爭議時，由全體監察員表決之。表決結果正反意見同數者，該選舉票應為有效。
+> 釋：一、配合修正條文第三條第一項將監察委員選舉投票方式改採限制連記投票法，爰就現行第六十一條增訂但書作為本條第一項。二、增列第二項，明定選舉人不得亮票，以保持投票之秘密性。
+
+* 62 選舉票有左列情事之一者無效：一、不用選舉委員會製發之選舉票者。二、圈二人以上或監察委員選舉圈選人數超過規定之連記人數者。三、所圈地位不能辨別為何人者。四、圈後加以塗改者。五、簽名、蓋章、按指印、加入任何文字或劃寫符號者。六、將選舉票撕破致不完整者。七、將選舉票汙染致不能辨別所圈為何人者。八、不加圈完全空白者。九、不用選舉委員會製備之圈選工具者。前項無效票，應由開票所主任管理員會同主任監察員認定；認定有爭議時，由全體監察員表決之。表決結果正反意見同數者，該選舉票應為有效。
+
+> 釋：一、第一項第二款係配合監察委員選舉之投票，修正條文第三條經修正採無記名限制連記投票法，爰增訂其選舉票以「圈選人數超過規定之連記人數者」為無效。其餘各款未修正。二、第二項未修正。
 
 * 63 在投票所或開票所有左列情事之一者，主任管理員應會同主任監察員令其退出：一、在場喧嚷或干擾勸誘他人投票或不投票，不服制止者。二、攜帶武器或危險物品入場者。三、有其他不正當行為，不服制止者。選舉人有前項情事之一者，令其退出時，應將所持選舉票收回，並將事實附記於選舉人名冊內該選舉人姓名下。其情節重大者，並應專案函報各該選舉委員會。
 
@@ -154,11 +216,15 @@
 
 * 78 選舉委員會應於被罷免人提出答辯書期間屆滿後五日內，就左列事項公告之：一、罷免投票日期及投票起、止時間。二、罷免理由書。三、答辯書。但被罷免人不於規定期間內提出答辯書者，不予公告。
 
-* 79 罷免案提議人，除監察委員之罷免外，於領取連署人名冊後，得設立罷免辦事處，並置辦事人員；其設置辦法，由中央選舉委員會定之。
+* 79 罷免案提議人，除監察委員之罷免外，於徵求連署期間，得設立罷免辦事處，置辦事人員。罷免案之進行，除徵求連署之必要活動外，不得有罷免或阻止罷免之宣傳活動。罷免辦事處及辦事人員之設置辦法及徵求連署辦法，由中央選舉委員會定之。
+
+> 釋：一、第一項文字修正。二、增訂第二項、第三項明定罷免案之進行除徵求連署之必要活動外，不得有其他罷免或反罷免之宣傳活動；其徵求連署辦法則授權中央選舉委員會定之。
 
 * 80 罷免案之投票，應於罷免案宣告成立後三十日內為之。
 
-* 81 罷免票應在票上刊印「同意罷免」、「不同意罷免」兩欄，由投票人以選舉委員會製備之工具圈定之。
+* 81 罷免票應在票上刊印「同意罷免」、「不同意罷免」兩欄，由投票人以選舉委員會製備之工具圈定之。投票人圈定後不得將圈定內容出示他人。
+
+> 釋：一、第一項未修正。二、增列第二項，明定罷免案投票人不得亮票，以保持投票之秘密性。
 
 * 82 罷免案之投票人及投票、開票，準用本法有關選舉人及投票、開票之規定。
 
@@ -172,37 +238,85 @@
 
 * 87 利用競選或助選機會，公然聚眾，以暴動破壞社會秩序者，處七年以上有期徒刑，首謀者處無期徒刑或十年以上有期徒刑。
 
-* 88 接受外國團體、法人或個人之財物支助從事競選活動者，處一年以上七年以下有期徒刑。
+* 87.1 辦理選舉、罷免期間，意圖妨害選舉或罷免，對於公務員依法執行職務時，施強暴脅迫者，處五年以下有期徒刑。犯前項之罪，因而致公務員於死者，處無期徒刑或七年以上有期徒刑；致重傷者，處三年以上十年以下有期徒刑。
 
-* 89 對於候選人行求期約或交付賄賂或其他不正利益，而約其放棄競選或為一定之競選活動者，處五年以下有期徒刑，得併科五萬元以下罰金。候選人要求期約或收受賄賂或其他不正利益，而許以放棄競選或為一定之競選活動者亦同。犯前二項之罪者，所收受之賄賂沒收之，如全部或一部不能沒收時，追徵其價額。
+> 釋：一、本條新增。二、參照刑法第一百三十五條，將個人以暴力妨害選舉或罷免之處罰，納入本法，俾對依法執行職務之公務員有所保障，並維持選舉或罷免之秩序。
+
+* 87.2 公然聚眾，犯前條之罪者，在場助勢之人處三年以下有期徒刑、拘役或三萬元以下罰金；首謀及下手實施強暴脅迫者，處三年以上十年以下有期徒刑。犯前項之罪，因而致公務員於死者，首謀及下手實施強暴脅迫者，處無期徒刑或七年以上有期徒刑；致重傷者，處五年以上十二年以下有期徒刑。
+
+> 釋：一、本條新增。二、參照刑法第一百三十六條，將聚眾以暴力妨害選舉或罷免之處罰，納入本法，俾對依法執行職務之公務員有所保障，並維持選舉或罷免之秩序。
+
+* 88 違反第四十五條之二第一款規定接受捐助者，處一年以上七年以下有期徒刑。
+
+> 釋：本條係配合修正條文第四十五條之二規定修正之。
+
+* 89 對於候選人或具有候選人資格者，行求期約或交付賄賂或其他不正利益，而約其放棄競選或為一定之競選活動者，處五年以下有期徒刑，得併科五萬元以下罰金。候選人或具有候選人資格者，要求期約或收受賄賂或其他不正利益，而許以放棄競選或為一定之競選活動者亦同。犯前項之罪者，所收受之賄賂沒收之，如全部或一部不能沒收時，追徵其價額。
+
+> 釋：一、為貫徹防止金錢介入選舉「搓圓仔湯」等之弊端，爰於第一項及第二項所定「候選人」之下增列「或具有候選人資格者」，俾適用於已登記之候選人及未登記者。二、第三項文字修正。
 
 * 90 以強暴、脅迫或其他非法之方法為左列行為之一者，處五年以下有期徒刑：一、妨害他人競選或使他人放棄競選者。二、妨害他人為罷免案之提議、連署或使他人為罷免案之提議、連署者。前項之未遂犯罰之。
 
 * 91 有左列行為之一者，處五年以下有期徒刑，得併科五萬元以下罰金：一、對於該選舉區內之團體或機構，假借捐助名義，行求期約或交付財物或其他不正利益，使其團體或機構之構成員不行使投票權或為一定之行使者。二、以財物或其他不正利益，行求期約或交付罷免案提議人或連署人，使之不為提議或連署，或為一定之提議或連署者。
 
-* 92 意圖使候選人當選或不當選，以文字、圖畫或演講，散布虛構事實，足以生損害於公眾或他人者，處五年以下有期徒刑。
+* 92 意圖使候選人當選或不當選，以文字、圖畫、錄音、錄影、演講或他法，散布謠言或傳播不實之事，足以生損害於公眾或他人者，處五年以下有期徒刑。
 
-* 93 有第六十三條第一項各款情形之一，經令其退出而不退出者，處二年以下有期徒刑。
+> 釋：為端正選風，避免以傳聞不實之謠言，以訛傳訛，或故意歪曲事實，致生損害於公眾或他人，爰將本條所定「散佈虛構事實」修正為「散布謠言或傳播不實之事」，並增列「錄音、錄影或他法」以應實際需要。
 
-* 94 罷免活動有左列情形之一者，在場助勢之人，處一年以下有期徒刑、拘役或一萬元以下罰金，首謀及著手實施者，處五年以下有期徒刑：一、聚眾包圍被罷免人、罷免案提議人、連署人或其辦事人員之服務機關、辦事處或住、居所者。二、以強暴、脅迫或其他非法之方法，妨害被罷免人執行職務或罷免案提議人、連署人或其辦事人員對罷免案之進行者。
+* 93 違反第六十一條第二項或第八十一條第二項規定者或有第六十三條第一項各款情事之一經令其退出而不退出者，處二年以下有期徒刑、拘役或二萬元以下罰金。
 
-* 95 抑留、毀壞、調換或奪取投票匭、選舉票、罷免票、選舉人名冊、投票報告表、開票報告表或圈選工具者，處五年以下有期徒刑。
+> 釋：配合修正條文第六十一條第二項、第八十一條第二項之修正，明定對亮票者處以刑罰俾端正選風，並增訂選科「拘役」、「罰金」刑。
 
-* 96 違反第四十九條第一項、第三項或第五十六條之規定，經監察人員制止不聽者，處二年以下有期徒刑。
+* 94 罷免案之進行有左列情事之一者，在場助勢之人，處一年以下有期徒刑、拘役或一萬元以下罰金；首謀及下手實施者，處五年以下有期徒刑：一、聚眾包圍被罷免人、罷免案提議人、連署人或其辦事人員之服務機關、辦事處或住、居所者。二、以強暴、脅迫或其他非法之方法，妨害被罷免人執行職務或罷免案提議人、連署人或其辦事人員對罷免案之進行者。
 
-* 97 違反第五十一條、第五十二條、第五十三條或第五十五條經監察人員制止不聽者，處一萬元以下罰鍰。將選舉票或罷免票以外之物投入票匭或將領得之選舉票或罷免票攜出場外者，處五千元以下罰鍰。
+> 釋：本條係參照刑法第一百五十條規定，將「著手實施」修正為「下手實施」並酌作文字修正。
 
-* 98 犯本章之罪，其他法律有較重處罰之規定者，從其規定。犯本章之罪，宣告六月以上有期徒刑之刑者，並宣告褫奪公權。
+* 95 意圖妨害或擾亂投票、開票而抑留、毀壞、調換或奪取投票匭、選舉票、罷免票、選舉人名冊、投票報告表、開票報告表、開票統計或圈選工具者，處五年以下有期徒刑。
+
+> 釋：一、本條第一項增加犯罪主觀構成要件，以明刑責。二、故意抑留、毀壞、調換、奪取「開票統計」者，亦依本條懲處。
+
+* 95.1 競選經費之支出超出選舉委員會依第四十五條之一第一項規定公告之最高限額者，處一萬元以上五萬元以下罰鍰。
+
+> 釋：一、本條新增。二、本條規定候選人之競選經費支出超過最高限額之處罰標準，以端正選舉風氣。
+
+* 96 違反第四十九條第三項、第五十五條第一款或第五十六條第一款之規定，經監察人員制止不聽者，處一年以下有期徒刑。
+
+> 釋：一、配合修正條文第四十九條第一項規定意旨，刪除本條引列之「第一項」三字。二、鑒於候選人或其助選員在公辦或私辦政見發表會外，另行公開演講，從事競選活動者，影響競選之公平之秩序，其情節與未經核准自辦政見發表會相同，爰增列違反修正條文第五十五條第一款刑罰之規定。
+
+* 97 違反第四十五條之二第二款、第四十五條之三第一項、第二項、第四項、第五十一條第一項、第二項之規定或依第四十五條之三第五項所定準則或依第五十一條第三項所定規格之規定者，處一千元以上一萬元以下罰鍰。違反第五十二條、第五十五條第二款至第九款、第五十六條第二款至第六款之規定或依第七十九條第三項所定辦法之規定，經監察人員制止不聽者亦同。將選舉票或罷免票以外之物投入票匭，或將領得之選舉票或罷免票攜出場外，或故意撕毀者，處五百元以上五千元以下罰鍰。
+
+> 釋：一、配合修正第三章第五節，將現行第一項分別二項並作左列修正：（一）增列對違反本法關於競選經費規定者之行政罰。（二）修正明定傳單、標語之製作違反修正條文第五十一條第一項第三項規定者，不須經監察人員制止不聽即予行政罰，並增列罰鍰數額之下限規定。（三）明定候選人或助選員違反修正條文第五十五條第二款至第八款各款情事之一及非助選員違反修正條文第五十六條第二款至第五款情事之一，經監察人員制止不聽者之罰鍰處罰。（四）為強化本法關於罷免規定之法效爰於第二項增訂違反依第七十九條第三項所定辦法之規定者之罰鍰處罰規定，以求周妥。二、現行第二項移列第三項並增訂故意撕毀選舉票或罷免票之處罰及罰鍰數額之下限規定。
+
+* 97.1 自發布選舉公告之日起至第四十五條所定競選活動期間前，任何人為自己或他人從事左列活動之一，經監察人員制止不聽者，處一千元以上一萬元以下罰鍰：一、公開演講或公開集會，從事競選宣傳。二、散發傳單或懸掛、豎立、張貼標語、壁報從事競選宣傳。三、使用宣傳車輛或當眾呼叫從事競選宣傳。
+
+> 釋：一、本條新增。二、為維護選舉秩序及公平起見，候選人競選活動應於修正條文第四十五條所規定之期間內為之，以防範所謂「期前活動」。爰參酌六十九年、七十年及七十一年選舉經驗，明定「期前活動」之禁止及其處罰。
+
+* 97.2 犯第八十九條第二項之罪或刑法第一百四十三條第一項之罪，於犯罪後三個月內自首者，免除其刑；逾三個月者，減輕或免除其刑；在偵查或審判中自白者，減輕其刑。意圖他人受刑事處分，虛構事實，而為前項之自首者，依刑法誣告罪之規定處罰之。
+
+> 釋：參照戡亂時期貪污治罪條例對於行賄罪之成例，於本法增列賄選案件受賄者自首及自白減免其刑之規定，以鼓勵檢舉賄選案件，並防止其流弊之發生。
+
+* 98 犯本章之罪，其他法律有較重處罰之規定者，從其規定。辦理選舉、罷免事務人員，假借職務上之權力、機會、或方法，以故意犯本章之罪者，加重其刑至二分之一。犯本章之罪或刑法分則第六章之妨害投票罪，宣告有期徒刑以上之刑者，並宣告褫奪公權。
+
+> 釋：一、第一項未修正。二、增列第二項。三、現行第二項移列第三項並作左列修正：（一）於本條第二項增加「或刑法分則第六章之妨害投票罪」十四字，以使犯刑法妨害投票罪者亦得適用。（二）「宣告六月以上有期徒刑者」修正為「宣告有期徒刑以上之刑者。」使宣告有期徒刑者，一併宣告褫奪公權，以遏止金錢、暴力介入選舉。
 
 * 99 已登記為候選人之現任公務人員，有左列情形之一者，經選舉委員會查明屬實後，通知各該人員之主管機關先行停止其職務，並依法處理：一、無正當理由拒絕選舉委員會請協辦事項或請派人員者。二、干涉選舉委員會人事或業務者。三、藉名動用或挪用公款作競選之費用者。四、要求有部屬或有指揮、監督關係之團體暨各該團體負責人作競選之支持者。五、利用職權無故調動人員，對競選預作人事上之安排者。
 
-* 100 中央公職人員選舉，由最高法院檢察署檢察長督率各級檢察官；地方公職人員選舉，由該管法院首席檢察官督率所屬檢察官分區查察，自動檢舉有關妨害選舉、罷免之刑事案件，並接受機關、團體或人民是類案件之告發、告訴、自首，即時開始偵查，為必要之處理。前項案件之偵查，檢察官得依刑事訴訟法及調度司法警察條例等規定，指揮司法警察人員為之。
+* 100 中央公職人員選舉，由最高法院檢察署檢察長督率各級檢察官；地方公職人員選舉，由該管法院檢察處首席檢察官督率所屬檢察官，分區查察，自動檢舉有關妨害選舉、罷免之刑事案件，並接受機關、團體或人民是類案件之告發、告訴、自首，即時開始偵查，為必要之處理。前項案件之偵查，檢察官得依刑事訴訟法及調度司法警察條例等規定，指揮司法警察人員為之。
 
-* 101 選舉委員會辦理選舉、罷免違法，檢察官、候選人、被罷免人或罷免案提議人，得自當選人名單或罷免投票結果公告之日起十五日內，以各該選舉委員會為被告，向管轄法院提起選舉或罷免無效之訴。
+> 釋：一、第一項文字修正，於「首席檢察官」之上加「檢察處」三字。二、第二項後段增訂對司法警察人員之特別規定，促其注意，自動執行職務，加強其責任。
+
+* 101 選舉委員會辦理選舉、罷免違法，足以影響選舉或罷免結果，檢察官、候選人、被罷免人或罷免案提議人，得自當選人名單或罷免投票結果公告之日起十五日內，以各該選舉委員會為被告，向管轄法院提起選舉或罷免無效之訴。
+
+> 釋：參採司法院院解字第三九八二號解釋意旨及以往臺灣省地方公職人員選舉法規關於選舉訴訟之規定，爰增列「足以影響選舉或罷免結果」等字。
 
 * 102 選舉或罷免無效之訴，經法院判決無效確定者，其選舉或罷免無效，并定期重行選舉或罷免。其違法屬選舉或罷免之局部者，局部之選舉或罷免無效，並就該局部無效部分定期重行投票。但局部無效部分顯不足以影響選舉或罷免結果者，不在此限。
 
-* 103 當選人有左列情事之一者，選舉委員會、檢察官或同一選舉區之候選人得以當選人為被告，自公告當選人名單之日起十五日內，向該管轄法院提起當選無效之訴：一、候選資格不實者。二、當選票數不實，足以影響選舉結果者。三、違反第四十九條第一項、第三項、第五十五條規定，不服取締者。
+* 103 當選人有左列情事之一者，選舉委員會、檢察官或同一選舉區之候選人得以當選人為被告，自公告當選人名單之日起十五日內，向該管轄法院提起當選無效之訴：一、當選票數不實，足以影響選舉結果者。二、違反第四十九條第三項或第五十五條第一款、第四款至第六款規定之一經監察人員書面制止不聽者。
+
+> 釋：一、為配合第三十六條之修正及增訂第一百零三條之一，爰將現行第一款「候選資格不實者」予以刪除。二、第二款移列第一款，文字未修正。三、第三款移列第二款，刪除「第一項」三字，第五十五條註記為第一款、第四款至第六款，並將「不服取締者」修正為「經監察人員書面制止不聽者」，以求妥適。
+
+* 103.1 當選人有第三十六條各款規定情事之一者，選舉委員會、檢察官或同一選舉區之候選人得以當選人為被告，於其任期或規定之日期屆滿前，向該管轄法院提起當選無效之訴。
+
+> 釋：一、本條新增。二、為配合修正條文第三十六條之規定，並鑒於當選人資格不合本法所定積極要件或有消極資格限制者，選舉委員會及代表公益之檢察官，宜即循司法程序，以取消其資格，不應受前條所定「十五日」起訴期間之限制，爰增訂之。同一選舉區之候選人如發現當選人有第三十六條各款規定情事者，自得向選舉委員會或檢察官舉發之。
 
 * 104 當選無效之訴經判決無效確定者，其當選無效。
 
@@ -216,7 +330,9 @@
 
 * 109 選舉、罷免訴訟、設選舉法庭，採合議制審理，並應先於其他訴訟審判之，以一審終結。有左列各款情形之一者，得以再審之訴，對於前項訴訟之確定終局判決，聲明不服：一、有民事訴訟法第四百九十六條第一項規定各款情事之一者。二、原判決就足影響於判決之重要證物漏未斟酌者。三、判決不備理由或理由矛盾者。四、違背言詞辯論公開之規定者。再審之訴，應於裁判送達後二十日之不變期間內提起，不得以再審理由知悉在後或發生於裁判送達後，變更其不變期間之計算。前項訴訟以一次為限，受理法院應於三個月內審結。對於再審之裁判，不得聲明不服。
 
-* 110 選舉、罷免訴訟程序，除本法規定者外，準用民事訴訟法之規定。
+* 110 選舉、罷免訴訟程序，除本法規定者外，準用民事訴訟法之規定。但關於捨棄、認諾、訴訟上自認或不爭執事實效力之規定，不在準用之列。
+
+> 釋：增列但書規定，於選舉訴訟時排除民事訴訟之捨棄、認諾、訴訟上自認或不爭執事實效力之規定，以避免當事人假借訴訟程序達成非法之目的，並防止選舉舞弊。
 
 * 111 本法所定罰鍰，由選舉委員會裁定；經通知後逾期不繳納者，移送法院強制執行。
 
