非訟事件法 1983.10.28

--- a/司法-民事/非訟事件法.md
+++ b/司法-民事/非訟事件法.md
@@ -60,7 +60,9 @@
 
 * 31 法人登記之主管機關，依民法總則施行法第十條之規定。
 
-* 32 法人設立之登記，除依民法第四十八條第二項及第六十一條第二項規定辦理外，並應附具左列文件：一、主管機關之許可書。二、董事證明資格之文件。三、社員名簿或財產目錄，並其證明文件。
+* 32 法人設立之登記，除依民法第四十八條第二項及第六十一條第二項規定辦理外，並應附具左列文件：一、主管機關之許可書。二、董事證明資格之文件。設有監察人者，其證明資格之文件。三、社員名簿或財產目錄，並其證明文件。
+
+> 釋：依民法第二十七條新增第四項之規定，法人得設監察人，如該法人設有監察人者，則其證明監察人資格之文件，亦應於辦理登記時一併附具之，爰將本條第二款配合修正。
 
 * 33 法人以事務所之設置，或遷移登記事項之變更、消滅或廢止，為登記或為登記之更正及塗銷者，由董事聲請之。為前項聲請者，應附具聲請事由之證明文件。
 
@@ -122,11 +124,17 @@
 
 * 61 依民法第一千一百七十八條所為之公示催告，應記載左列事項：一、呈報人之姓名、性別、年齡、籍貫、職業及住、居所。二、被繼承人之姓名、性別、年齡、籍貫、職業及住、居所。三、被繼承人之死亡年、月、日及場所。四、申請權利之期間及期間內應為申報之催告。五、因不申報權利而生之失權效果。六、法院。
 
-* 62 民法第三十六條之請求宣告解散事件，第三十八條、第三十九條及第四十二條之有關法人清算事件，第五十一條第三項之許可召集總會事件，第五十八條之聲請解散事件，第六十二條之聲請必要處分事件，第六十三條之聲請變更組織事件，均由法人主事務所所在地法院管轄。
+* 62 民法第三十三條第二項之請求解除董事或監察人職務事件，第三十六條之請求宣告解散事件，第三十八條、第三十九條及第四十二條之有關法人清算事件，第五十一條第三項之許可召集總會事件，第五十八條之聲請解散事件，第六十二條之聲請必要處分事件，第六十三條之聲請變更組織事件，均由法人主事務所所在地法院管轄。
 
-* 63 依民法第三十六條之規定，主管機關、檢察官或利害關係人聲請宣告解散時，應附具應為解散之法定事由文件；由利害關係人聲請者，其聲請書並應載明其姓名、性別、年齡、籍貫、職業及住、居所，並釋明其利害關係。宣告解散時，法院應囑託法人登記處為之登記。
+> 釋：為配合民法第三十三條新增第二項「前項董事或監察人違反法令或章程，足以危害公益或法人之利益者，主管機關得請求法院解除其職務」，本條應將上述事件予以增列。
 
-* 64 依左列規定為聲請時，應附具證明資格及法定事由之文件：一、民法第三十八條利害關係人聲請選任清算人時。二、民法第五十一條第三項社員請求法院為召集總會之許可時。三、民法第五十八條利害關係人聲請解散時。四、民法第六十二條利害關係人聲請法院為必要之處分者。五、民法第六十三條利害關係人聲請變更財團之組織時。前項第三款法院宣告解散時，第五款法院命令財團變更其組織時，應囑託法人登記處為之登記。
+* 63 依民法第三十六條或第五十八條之規定，主管機關、檢察官或利害關係人聲請宣告解散時，應附具應為解散之法定事由文件；由利害關係人聲請者，其聲請書並應載明其姓名、性別、年齡、籍貫、職業及住、居所，並釋明其利害關係。宣告解散時，法院應囑託法人登記處為之登記。
+
+> 釋：民法第五十八條經修正後，得依該條規定聲請宣告法人解散者，為：（一）主管機關，（二）檢察官，（三）利害關係人，此三者與民法第三十六條所定之聲請人完全相同，爰於本條第一項中併列民法第五十八條，俾利適用。
+
+* 64 主管機關或檢察官依左列規定為聲請時，應附具法定事由之文件；其他聲請人為聲請時，並應附具證明資格之文件：一、民法第三十八條之聲請選任清算人。二、民法第六十二條之聲請法院為必要處分。三、民法第六十三條之聲請變更財團組織。主管機關依民法第三十三條第二項規定，請求法院解除法人董事或監察人職務時，應附具法定事由之文件。社團之社員依民法第五十一條第三項規定，請求法院為召集總會之許可時，應附具法定事由及證明資格之文件。第一項第三款法院命令財團變更其組織時，應囑託法人登記處為之登記。
+
+> 釋：一、本條第一項原第一款、第四款、第五款各該聲請事件，依民法修正條文規定，爰作文字上之調整，列為本條第一項。二、本條第一項原第二款聲請事件，移列為第三項並作文字上之修正。三、本條第一項原第三款聲請事件，已移列第六十三條第一項，爰予刪除。四、民法第三十三條第二項規定之請求解除法人董事監察人職務事件，僅主管機關得為聲請，別無其他聲請權人，爰就其聲請所應附具文件之規定，列為本條第二項。五、民法第五十一條第三項規定之請求法院許可召集社員總會事件，僅社團之社員得為聲請，別無其他聲請權人，爰予單獨列為本條第三項。
 
 * 65 法人董事全部不能行使職權，致法人有受損害之虞時，法院因利害關係人或檢察官之請求，得選任臨時管理人，代行董事之職權。但不得為不利於法人之行為。前項臨時管理人，法院應囑託法人登記處為之登記。
 
@@ -158,7 +166,9 @@
 
 * 79 繼承人因故不能管理遺產，或未委任遺產管理人，被繼承人亦為遺囑指定者，準用前條之規定。前項遺產管理人應於六個月內清償債權，並交付遺贈物，如有賸餘，應提存之；其性質不適於提存者，得於拍賣後提存其價金。
 
-* 80 民法第一千二百十一條所定遺囑執行人之聲請指定事件，及第一千二百十八條所定遺囑執行人之聲請另行指定事件，由繼承開始時被繼承人住所地法院管轄。第七十七條第三項之規定，於前項情形準用之。
+* 80 民法第六十條第三項、第一千二百十一條所定遺囑執行人之聲請指定事件，及第一千二百十八條所定遺囑執行人之聲請另行指定事件，由繼承開始時被繼承人住所地法院管轄。第七十七條第三項之規定，於前項情形準用之。
+
+> 釋：一、為配合民法第六十條新增第三項「以遺囑捐助設立財團法人者，如無遺囑執行人時，法院得依主管機關、檢察官或利害關係人之聲請，指定遺囑執行人」之規定，本條第一項應將上述事件予以增列。二、本條第二項不修正。
 
 * 81 公司法所定由法院處理之公司事件，由本公司所在地法院管轄。公司解散命令事件，法院為裁定前，應訊問利害關係人。
 
