民事訴訟法 1983.10.28

--- a/司法-民事/民事訴訟法.md
+++ b/司法-民事/民事訴訟法.md
@@ -190,6 +190,10 @@
 
 * 95 本節之規定，於法院以裁定終結本案或與本案無涉之爭點者準用之。
 
+* 95.1 檢察官為當事人，依本節之規定應負擔訴訟費用時，由國庫支付。
+
+> 釋：一、本條新增。二、依民法第八條及第十四條修正條文規定，檢察官於宣告死亡事件及宣告禁治產事件，亦得為聲請人，因此，檢察官在撤銷禁治產宣告之訴（見民事訴訟法第六百零九條第二項、第六百十條）或撤銷死亡宣告之訴（見民事訴訟法第六百三十五條），亦可能成為訴訟當事人，如有應行負擔訴訟費用之情形，參照非訟事件法第八條第一項但書之例，其費用應由國庫支付。爰增設本條之規定，俾利適用。
+
 * 96 原告於中華民國無住所、事務所及營業所者，法院應依被告聲請，以裁定命原告供訴訟費用之擔保；訴訟中發生擔保不足額或不確實之情事時亦同。前項規定，如原告請求中，被告無爭執之部分，足以賠償訴訟費用時，不適用之。
 
 * 97 被告已為本案之言詞辯論者，不得聲請命原告供擔保。但應供擔保之事由知悉在後者，不在此限。
@@ -1246,7 +1250,9 @@
 
 * 607 駁回禁治產聲請之裁定，得為抗告。第五百九十九條至第六百零一條之規定，於抗告法院之程序準用之。
 
-* 608 關於聲請禁治產程序之費用，如宣告禁治產者，由禁治產人負擔。除前項情形外，其費用由聲請人負擔。
+* 608 關於聲請禁治產程序之費用，如宣告禁治產者，由禁治產人負擔。除前項情形外，其費用由聲請人負擔。檢察官為聲請人時，由國庫支付。
+
+> 釋：一、本條第一項不修正。二、依民法第十四條修正條文，檢察官於宣告禁治產事件，亦得為聲請人；當檢察官為聲請人時，如有應行負擔程序費用之情形，參照非訟事件法第八條第一項但書之例，其費用應由國庫支付。爰於本條第二項增設但書，以資配合。
 
 * 609 宣告禁治產之裁定，不得抗告。依民法規定得聲請禁治產之人，得向就禁治產之聲請曾為裁判之地方法院，提起撤銷禁治產宣告之訴。
 
@@ -1274,7 +1280,9 @@
 
 * 621 第五百九十八條至第六百零三條之規定，於撤銷禁治產之聲請準用之。
 
-* 622 關於聲請撤銷禁治產程序之費用，如撤銷禁治產者，由禁治產人負擔。除前項情形外，其費用由聲請人負擔。
+* 622 關於聲請撤銷禁治產程序之費用，如撤銷禁治產者，由禁治產人負擔。除前項情形外，其費用由聲請人負擔。檢察官為聲請人時，由國庫支付。
+
+> 釋：一、本條第一項不修正。二、依民法第十四條修正條文，檢察官於撤銷禁治產事件，亦得為聲請人，當檢察官為聲請人時，如有應行負擔程序費用之情形，參照非訟事件法第八條第一項但書之例，其費用應由國庫支付。爰於本條第二項增設但書，以資配合。
 
 * 623 撤銷禁治產之裁定，應附理由。前項裁定，應送達於聲請人及禁治產人。第六百十八條之規定，於第一項裁定準用之。
 
@@ -1298,9 +1306,13 @@
 
 * 633 宣告死亡之判決，應確定死亡之時。
 
-* 634 關於宣告死亡程序之費用，如宣告死亡者，由遺產負擔。除前項情形外，其費用由聲請人負擔。
+* 634 關於宣告死亡程序之費用，如宣告死亡者，由遺產負擔。除前項情形外，其費用由聲請人負擔。檢察官為聲請人時，由國庫支付。
 
-* 635 撤銷死亡宣告之訴，有法律上利害關係之人得提起之。第五百五十一條第二項所定之聲請人死亡者，得以其他有法律上利害關係之人為被告。
+> 釋：一、本條第一項不修正。二、依民法第八條修正條文，檢察官於宣告死亡事件，亦得為聲請人；當檢察官為聲請人時，如有應行負擔程序費用之情形，參照非訟事件法第八條第一項但書之例，其費用應由國庫支付。爰於本條第二項增設但書，以資配合。
+
+* 635 撤銷死亡宣告之訴，檢察官或有法律上利害關係之人，得提起之。第五百五十一條第二項所定之聲請人死亡者，得以其他有法律上利害關係之人為被告。
+
+> 釋：一、依民法第八條修正條文規定，檢察官於宣告死亡事件，亦得為聲請人，因此，檢察官在撤銷死亡宣告之訴，即可能成為訴訟當事人，爰於本條第一項增列之，以利適用。二、本條第二項不修正。
 
 * 636 撤銷死亡宣告之訴，除準用第五百五十一條第二項之規定外，如受死亡宣告人尚生存或確定死亡之時不當者，亦得提起之。
 
