民事訴訟法 1984.6.8

--- a/司法-民事/民事訴訟法.md
+++ b/司法-民事/民事訴訟法.md
@@ -948,9 +948,9 @@
 
 * 465 對於第一審判決，或其一部未經向第二審法院上訴，或附帶上訴之當事人，對於維持該判決之第二審判決，不得上訴。
 
-* 466 對於財產權上訴之第二審判決，如因上訴所得受之利益不逾八千元者，不得上訴。前項所定數額，得因地方情形，以司法行政最高機關命令減為四千元，或增至一萬二千元。計算上訴利益，準用民事訴訟費用法關於計算訴訟標的價額之規定。對於第四百二十七條第二項訴訟所為之第二審判決，不得上訴。
+* 466 對於財產權上訴之第二審判決，如因上訴所得受之利益不逾十萬元者，不得上訴。前項所定數額，司法院得因情勢需要，以命令減為五萬元，或增至十五萬元。計算上訴利益，準用民事訴訟費用法關於計算訴訟標的價額之規定。對於第四百二十七條第二項訴訟所為之第二審判決，不得上訴。
 
-> 釋：一、將第一項「一千元」修正為「八千元」。修正理由為訴訟權為憲法所賦予，在訴訟法上設以金額限制第三審上訴之規定，原非得已，但仍應注意衡情適時，力求妥當，避免偏失。二、第二項修正為「．．．．．．以司法行政最高機關命令減為四千元或增至一萬二千元」。俾司法行政最高機關得視地方情形，予以彈性之增減。第三項照現行法文字，未加修正。三、新增第四項之理由，以現行法規定訴訟標的額過低，造成第三審負擔過重現象，為減輕第三審法院之負荷及避免當事人之訟累，特參照刑事訴訟法第三百七十六條規定予以增訂第四項。
+> 釋：關於財產權之訴訟，其因上訴第三審所得受之利益，若不問多寡概許其上訴，不惟徒增訟累，且於當事人與國家之利益有違，故現行民事訴訟法特設本條，規定因上訴所得受之利益不逾八千元者，不得上訴第三審，以資因應，惟近年來由於我國工商業發達，經濟突飛猛進，導致社會結構劇烈變遷。八千元上訴利益之限制已失其限制目的。爰參照我國經濟情況及最高法院功能，將此數額調高，以減少訟累，並保護當事人及國家利益。
 
 * 467 對於第二審判決上訴，非以其違背法令為理由，不得為之。
 
@@ -960,9 +960,13 @@
 
 * 470 提起上訴，應以上訴狀提出於原第二審法院為之。上訴狀內，應表明上訴理由，並添具關於上訴理由之必要證據。上訴狀內，宜記載因上訴所得受之利益。
 
-* 471 上訴狀內未表明上訴理由者，上訴人應於提起上訴後十五日內，提出理由書於原第二審法院；未提出者，法院毋庸命其補正。被上訴人得於上訴狀或前項理由書送達後十五日內，提出答辯狀於原第二審法院。第二審法院送交訴訟卷宗於第三審法院，應於收到答辯狀或前項期間已滿後為之。
+* 471 上訴狀內未表明上訴理由者，上訴人應於提起上訴後二十日內，提出理由書於原第二審法院；未提出者，毋庸命其補正，由原第二審法院以裁定駁回之。被上訴人得於上訴狀或前項理由書送達後十五日內，提出答辯狀於原第二審法院。第二審法院送交訴訟卷宗於第三審法院，應於收到答辯狀或前項期間已滿後為之。
 
-* 472 上訴人及被上訴人在第三審未判決前，得提出上訴理由書，答辯狀或其追加書狀於第三審法院。第三審法院以認為有必要時為限，得將前項書狀送達於他造。
+> 釋：一、當事人為拖延訴訟，恆濫行上訴，既不於上訴狀內表明上訴理由，亦不於提起上訴後十五日內提出理由書，坐等第三審以其上訴為不合程式，以裁定駁回，致訴訟不能迅速終結，於他造權益之保護，自嫌未周，爰刪除本條第一項末句「法院」二字，並於該句之下增列「由原第二審法院以裁定駁回之」，以杜其弊。（參考日本民事訴訟法第三百九十九條第一項第二款）。二、為使上訴人提起第三審上訴後，有餘裕撰擬上訴理由書以保護其正當權益，爰將現行條文「上訴人應於提起上訴後十五日內，提出理由書於原第二審法院」修正為「上訴人應於提起上訴後二十日內，提出理由書於原第二審法院」庶不致因時日過短，致遭駁回。三、第二項、第三項不修正。
+
+* 472 被上訴人在第三審未判決前，得提出答辯狀及其追加書狀於第三審法院。上訴人亦得提出上訴理由追加書狀。第三審法院以認為有必要時為限，得將前項書狀送達於他造。
+
+> 釋：上訴人因前條之修正已無從於第三審提出上訴理由書，為配合其修正，爰將現行條文第一項「上訴人在第三審未判決前，得提出上訴理由書」刪除，並於末句增列「上訴人亦得提出上訴理由追加書狀」，俾求法意一致。
 
 * 473 上訴之聲明，不得變更或擴張之。被上訴人，不得為附帶上訴。
 
@@ -974,9 +978,13 @@
 
 * 477 第三審法院認上訴為有理由者，就該部分應廢棄原判決。因違背訴訟程序之規定廢棄原判決者，其違背之訴訟程序部分，視為亦經廢棄。
 
-* 478 經廢棄原判決者，應將該事件發回原第二審法院或發交其他同級法院。但原判決之理由未盡或不當，如依其他理由認為判決結果相同者，不得廢棄原判決。前項發回或發交判決，就第二審法院應調查之事項，應詳予指示。受發回或發交之法院，應以第三審法院所為廢棄理由之法律上判斷為其判決基礎。
+* 477.1 除第四百六十九條第一款至第五款之情形外，第二審判決違背法令而不影響裁判之結果者，不得廢棄原判決。
 
-> 釋：第三審發回或發交之案件，年有增加，強加限制固非所宜，但漫無限制，亦屬堪慮，爰於原第一項之末，增加但書「但原判決之理由未盡或不當，如依其他理由認為判決結果相同者，不得廢棄原判決。」將修正案第二項列為本條第二項，原第二項改列為本條第三項。
+> 釋：為明定除有絕對上訴理由外，原判決縱有違背法令之相對上訴理由，但如於裁判結果無影響，仍應予以維持之旨趣，並為維持現行法第四百七十八條第一項但書規定之意旨，爰增訂本條，規定除第四百六十九條第一款至第五款之情形外，第二審判決違背法令而不影響裁判之結果者，不得廢棄原判決。
+
+* 478 經廢棄原判決者，應將該事件發回原第二審法院或發交其他同級法院。前項發回或發交判決，就第二審法院應調查之事項，應詳予指示。受發回或發交之法院，應以第三審法院所為廢棄理由之法律上判斷為其判決基礎。
+
+> 釋：本條第一項但書，已因第四百七十七條之一之增訂，足以涵蓋，自無須再設規定，爰予刪除，以免重複。
 
 * 479 左列各款情形，第三審法院應就該事件自為判決：一、因其於確定之事實，不適用法規或適用不當廢棄原判決，而事件已可依該事實為裁判者。二、因事件不屬普通法院之權限，而廢棄原判決者。
 
@@ -988,7 +996,9 @@
 
 * 483 訴訟程序進行中所為之裁定，除別有規定外，不得抗告。
 
-* 484 關於財產權之訴訟，其標的之金額或價額在第四百六十六條所定之上訴利益額數以下者，其第二審法院所為之裁定，不得抗告。
+* 484 不得上訴於第三審法院之事件，其第二審法院所為裁定，不得抗告。
+
+> 釋：訴訟事件之本案判決，如依法不得上訴第三審法院，有關該事件之裁定自亦不得抗告。現行法不得上訴於第三審法院者，除第四百六十六條第一項依上訴利益為標準，規定不得上訴第三審外，同條第四項尚規定第四百二十七條第二項簡易訴訟程序之判決，亦不得上訴第三審法院，現行條文僅就上訴利益額規定，自嫌不足，爰仿刑事訴訟法第四百零五條立法方式，作概括之規定。
 
 * 485 受命推事或受託推事之裁定，不得抗告。但其裁定如係受訴法院所為而依法得為抗告者，得向受訴法院提出異議。前項異議，準用對於法院同種裁定抗告之規定。受訴法院就異議所為之裁定，得依本編之規定抗告。
 
