--- a/行政-財政及金融/銀行法.md
+++ b/行政-財政及金融/銀行法.md
@@ -10,15 +10,21 @@
 
 * 5 銀行依本法辦理授信，其期限在一年以內者，為短期信用；超過一年而在七年以內者，為中期信用；超過七年者，為長期信用。
 
-* 6 本法稱支票存款，謂依約定，憑存款人所簽發之支票，隨時提取不計利息之存款。
+* 6 本法稱支票存款，謂依約定憑存款人簽發支票，或利用自動化設備委託支付隨時提取不計利息之存款。
 
-* 7 本法稱活期存款，謂存款人憑存摺隨時提取之存款。
+> 釋：為配合銀行自動化作業，加強對顧客服務及減少不必要之文件作業，增列支票存款得「利用自動化設備委託支付」，隨時可由銀行現金自動付款機或電腦終端機等自動化設備提取款項。
 
-* 8 本法稱定期存款，謂有一定時期之限制，存款人憑存單於到期時提取之存款。
+* 7 本法稱活期存款，謂存款人憑存摺或依約定方式，隨時提取之存款。
 
-* 9 本法稱儲蓄存款，謂個人或非營利法人，以積蓄資金為目的，憑存摺或存單提取之存款。
+> 釋：目前銀行為加強對客戶服務，多與客戶訂立契約，憑水、電公司等繳費通知單或稅捐機關繳稅通知書直接於存款帳戶內撥付，同時部分銀行設置自動付款機採用電腦作業，憑「現金自動付款卡」取款與憑摺取款之情形已有不同，爰修正現行條文，以配合實際作業之需要。
 
-> 釋：本條原規定所稱「小額存款」經財政部會商中央銀行規定每戶存款最高額度暫以新臺幣壹百萬元為限，惟實施以來，社會迭有反映認為不切實際，對於非營利法人而有鉅額款項須賴存儲孳生利息者殊感不便，如存戶以分散方式存儲，銀行作業時亦難核阻，同時具有儲蓄性質之信託資金並無最高額度之限制，爰刪除原規定「小額」二字，俾切實際。
+* 8 本法稱定期存款，謂有一定時期之限制，存款人憑存單或依約定方式提取之存款。
+
+> 釋：目前銀行辦理之綜合存款，係將活期存款、定期存款、存單質押擔保放款等帳戶納入一存摺內已不用存單，存戶憑銀行簽發之存摺，隨時存入、提取或借款。爰增列「或依約定方式」等字，以符實際。
+
+* 9 本法稱儲蓄存款，謂個人或非營利法人，以積蓄資金為目的之活期或定期存款。
+
+> 釋：將原規定中「憑存摺或存單提取之存款」改為「之活期或定期存款」。以示儲蓄存款包括活期與定期兩種性質，其提取方式依本法第七條及第八條規定，並刪除原定憑存摺或存單提取之文字，俾資應用。
 
 * 10 本法稱信託資金，謂銀行以受託人地位，收受信託款項，依照信託契約約定之條件，為信託人指定之受益人之利益而經營之資金。
 
@@ -30,7 +36,9 @@
 
 * 14 本法稱中、長期分期償還放款，謂銀行依據借款人償債能力，經借貸雙方協議，於放款契約內訂明分期還本付息辦法及借款人應遵守之其他有關條件之放款。
 
-* 15 本法稱商業票據，謂依國內外商品交易或勞務提供，而產生之匯票或本票。前項匯票以出售商品或提供勞務之相對人為付款人而經其承兌者，謂商業承兌匯票。前項相對人委託銀行為付款人而經其承兌者，謂銀行承兌匯票。銀行對遠期匯票或本票，以折扣方式預收利息而購入者，謂貼現。
+* 15 本法稱商業票據，謂依國內外商品交易或勞務提供而產生之匯票或本票。前項匯票以出售商品或提供勞務之相對人為付款人而經其承兌者，謂商業承兌匯票。前項相對人委託銀行為付款人而經其承兌者，謂銀行承兌匯票。出售商品或提供勞務之人，依交易憑證於交易價款內簽發匯票，委託銀行為付款人而經其承兌者，亦同。銀行對遠期匯票或本票，以折扣方式預收利息而購入者，謂貼現。
+
+> 釋：一、第一項、第二項及第四項未修正。二、為推廣基於實際交易行為所產生票據之使用與流通，鼓勵銀行經營匯票承兌業務，爰將現行僅准許銀行經營接受「買方」委託之匯票承兌業務，擴大於「賣方」，於第三項之末增列「出售商品或提供勞務之人，依交易憑證於交易價格內簽發匯票，委託銀行為付款人而經其承兌者，亦同」，以應實際需要。
 
 * 16 本法稱信用狀，謂銀行受客戶之委任。通知並授權指定受益人，在其履行約定條件後，得依照一定款式，開發一定金額以內之匯票或其他憑證，由該行或其指定之代理銀行負責承兌或付款之文書。
 
@@ -68,9 +76,17 @@
 
 * 31 銀行開發信用狀或擔任商業匯票之承兌，其與客戶間之權利、義務機關，以契約定之。銀行辦理前項業務，如需由客戶提供擔保者，其擔保依第十二條所列各款之規定。
 
-* 32 銀行不得對本行負責人或職員為無擔保放款或保證。
+* 32 銀行不得對本行負責人或職員，或對與本行負責人或辦理授信之職員有利害關係者，為無擔保授信。但消費者貸款不在此限。前項消費者貸款額度，由中央主管機關定之。
 
-* 33 銀行對本行負責人或職員所為之擔保放款或對與本行負責人或職員有利害關係之企業或個人所為之放款，其條件不得優於其他借款人。
+> 釋：一、原條文之「放款或保證」等文字，其範圍似嫌過狹，爰修正為「授信」，以求周妥。二、為使銀行能對本行負責人或職員辦理消費者之貸款，爰於第一項增列但書規定，以配合實際之需要；至其額度則增列第二項授權由中央主管機關定之。
+
+* 33 銀行對本行負責人或職員，或對與本行負責人或辦理授信之職員有利害關係者為擔保授信，其條件不得優於其他同類授信對象。前項授信總餘額，由中央主管機關洽商中央銀行定之。
+
+> 釋：一、第一項係就現行條文酌作文字修正，就銀行對本行負責人或職員，或對與本行負責人或辦理授信之職員有利害關者所為擔保授信之限制。二、增列第二項，對其擔保授信之總餘額加以限制，其額度由中央主管機關洽商中央銀行定之，以避免風險之集中，並防止流弊之發生。
+
+* 33.1 前二條所稱有利害關係者，謂有左列情形之一而言：一、銀行負責人或辦理授信之職員之配偶，三親等以內之血親或二親等以內之姻親。二、銀行負責人或辦理授信之職員獨資、合夥經營之事業。三、銀行負責人或辦理授信之職員持有超過公司已發行股份總數或資本總額百分之十之企業。四、銀行負責人或辦理授信之職員為董事、監察人或經理人之企業。但其董事、監察人或經理人係因投資關係，經中央主管機關核准而兼任者，不在此限。五、銀行負責人或辦理授信之職員為代表人、管理人之法人或其他團體。
+
+> 釋：一、本條新增，就本法第三十二條及第三十三條所指有利害關係者，作明確之規定，以利適用。二、第一款係參照遺產及贈與稅法第五條第六款「配偶間及三親等以內親屬間財產之買賣以贈與論」規定所擬列。三、第二款及第四款係因銀行負責人或辦理授信之職員獨資、合夥經營之事業或為企業之董事、監察人或經理人者，其與銀行之利益勢必衝突，為保障銀行存款人之安全，故列為有利害關係者，使受銀行授信之限制。惟為使經中央主管機關核准投資而派兼董、監事或經理人之企業不受限制，爰於第四款增列但書規定。四、第三款係參照公務員服務法第十三條第一項規定「．．．．其所有股份總額未超過其所投資公司股本總額百分之十者，不在此限」及公司法第一百七十九條等規定，予以增列。五、為避免對與銀行負責人或辦理授信之職員為代表人或管理人之學校、公益慈善機構、祭祀公業及非法人團體授信，爰規定如第五款條文。
 
 * 34 銀行不得於規定利息外，以津貼、贈與或其他給與方法吸收存款。但對於信託資金依約定發給紅利者，不在此限。
 
@@ -112,7 +128,9 @@
 
 * 51 銀行之營業時間及休假日，得由中央主管機關規定，並公告之。
 
-* 52 銀行之設立，除法律另有規定或本法修正施行前經專案核准者外，以組織股份有限公司者為限。
+* 52 銀行為法人，其組織除法律另有規定或本法修正施行前經專案核准者外，以股份有限公司為限。
+
+> 釋：依原第五十二條規定，銀行之組織型態，除依公司法股份有限公司組織者，為法人外，其依法律組織之銀行，如中國輸出入銀行，及在銀行法修正施行前經專案核准之銀行，如臺灣銀行、臺灣土地銀行、臺灣省合作金庫及臺北市銀行等，均非公司組織型態，致不具有法人資格；其因國內權益而涉訟時，唯賴判例認定具有當事人能力（如最高法院十九年臺上字三一六四號，五十一年臺上字第二七七二號判例及五十一年十月八日最高法院民刑庭總會決議）其在國外涉訟時，對其權益保障影響至鉅，為求根本解決，爰修正明定，銀行為法人，其組織除法律另有規定或本法修正施行前經專案核准者外，以股份有限公司為限，俾確立銀行之法人資格。
 
 * 53 設立銀行者，應載明左列各款，報請中央主管機關許可：一、銀行之種類、名稱及其公司組織之種類。二、資本總額。三、營業計畫。四、本行及分支機構所在地。五、發起人姓名、籍貫、住居所、履歷及認股金額。
 
@@ -132,7 +150,9 @@
 
 * 61 銀行經股東會決議解散者，應申敘理由，附具股東會紀錄及清償債務計畫，申請主管機關核准後進行清算。主管機關依前項規定核准解散時，應即撤銷其許可。
 
-* 62 銀行因不能支付其債務，經中央銀行停止其票據交換者，中央主管機關應勒令停業，限期清理。前項勒令停業之銀行，如於清理期限內，已回復支付能力者，得申請中央主管機關核准復業；逾期未經核准復業者，應撤銷其許可；並自停業時起視為解散，原有清理程序視為清算。
+* 62 銀行因發生左列情事之一者，中央主管機關得勒令停業，限期清理：一、不能撥補其應付票據差額，經中央銀行停止其票據交換者。二、不能支付其即期債務，有礙銀行健全經營者。前項勒令停業之銀行，如於清理期限內，已回復支付能力者，得申請中央主管機關核准復業，逾期未經核准復業者，應撤銷其許可；並自停業時起視為解散，原有清理程序視為清算。
+
+> 釋：一、依本法第二十條規定，信託投資公司為銀行法所稱之銀行之二種，其經營之業務項目，依同法第一百零一條規定不包括支票存款，故不得參加票據交換。而原第六十二條第一項規定，須經停止票據交換，始能勒令停業，以致信託投資公司，雖經營不善不能支付其債務如未停止其票據交換，仍無法勒令其停業，爰修正現行條文第一項將勒令歇業之情事分列二款，並將「應勒令停業」修正為「得勒令停業」，俾利適用。二、第二項不修正。
 
 * 63 銀行清算及清理，除本法另有規定外，準用股份有限公司有關普通清算之規定。但有公司法第三百三十五條所定之原因，或因前條第二項之情事而為清算時，應依特別清算程序辦理。前項清理之監督，由主管機關為之；主管機關為監督清理之進行，得派員監理。
 
@@ -150,7 +170,9 @@
 
 * 70 本法稱商業銀行，謂以收受支票存款，供給短期信用為主要任務之銀行。
 
-* 71 商業銀行經營左列業務：一、收受支票存款。二、收受活期存款。三、收受定期存款。四、辦理短期及中期放款。五、辦理票據貼現。六、投資公債、國庫券、公司債券及金融債券。七、辦理國內外匯兌。八、辦理商業匯票之承兌。九、簽發國內外信用狀。十、辦理國內外保證業務。十一、代理收付款項。十二、代銷公債、國庫券、公司債券及公司股票。十三、辦理與前列各款業務有關之倉庫、保管及代理服務業務。
+* 71 商業銀行經營左列業務：一、收受支票存款。二、收受活期存款。三、收受定期存款。四、辦理短期及中期放款。五、辦理票據貼現。六、投資公債、短期票券、公司債券及金融債券。七、辦理國內外匯兌。八、辦理商業匯票之承兌。九、簽發國內外信用狀。十、辦理國內外保證業務。十一、代理收付款項。十二、代銷公債、國庫券、公司債券及公司股票。十三、辦理與前列各款業務有關之倉庫、保管及代理服務業務。
+
+> 釋：為加強短期票券交易、活潑銀行資金之運用，爰將原條文第六款「國庫券」修正為「短期票券」，其餘未修正。
 
 * 72 商業銀行辦理中期放款之總餘額，不得超過其所收定期存款總餘額。
 
@@ -164,11 +186,13 @@
 
 * 77 本法稱儲蓄銀行，謂以收受存款及發行金融債券方式吸收國民儲蓄，供給中期及長期信用為主要任務之銀行。
 
-* 78 儲蓄銀行經營左列業務：一、收受儲蓄存款。二、收受定期存款。三、收受活期存款。四、發行金融債券。五、辦理企業生產設備中期放款、長期放款，及中、長期分期償還放款。六、辦理企業建築、住宅建築中期放款，及中、長期分期償還放款。七、投資公債、國庫券、公司債券及公司股票。八、辦理票據貼現。九、辦理商業匯票承兌。十、辦理國內匯兌。十一、保證發行公司債券。十二、代理收付款項。十三、承銷公債、國庫券、公司債券及公司股票。十四、辦理經中央主管機關核准之國內外保證業務。十五、辦理與前列各款業務有關之倉庫及其他保管業務。
+* 78 儲蓄銀行經營左列業務：一、收受儲蓄存款。二、收受定期存款。三、收受活期存款。四、發行金融債券。五、辦理企業生產設備中期放款、長期放款，及中、長期分期償還放款。六、辦理企業建築、住宅建築中期放款，及中、長期分期償還放款。七、投資公債、短期票券公司債券及公司股票。八、辦理票據貼現。九、辦理商業匯票承兌。十、辦理國內匯兌。十一、保證發行公司債券。十二、代理收付款項。十三、承銷公債、國庫券、公司債券及公司股票。十四、辦理經中央主管機關核准之國內外保證業務。十五、辦理與前列各款業務有關之倉庫及其他保管業務。
 
-* 79 定期儲蓄存款到期前不得提取。但存款人得質借或中途解約，其利息按已存期間定期存款利率計算，辦法由中央主管機關洽商中央銀行定之。
+> 釋：為加強短期票券交易，活潑銀行資金之運用，爰將原條文第七款「國庫券」修正為「短期票券」，其餘未修正。
 
-> 釋：原條文之規定，鑒於二年來實際執行情形，對於部分存款人遇有特殊需要，必須提前解約者，甚感困難，增加銀行與存款人間之紛擾，社會亦多反映，為兼顧實情，爰酌予修正，俾富彈性。
+* 79 定期儲蓄存款到期前不得提取。但得以之質借或於七日以前通知銀行中途解約，其利息按已存期間定期存款利率計算，辦法由中央主管機關洽商中央銀行定之。
+
+> 釋：定期儲蓄存款本應於到期日提取，若存戶中途解約，則有礙銀行資金調度。茲為兼顧存款人利益及銀行資金調度並且為便利儲蓄存款人急需，明定欲中途解約者，應於七日前通知銀行。
 
 * 80 儲蓄銀行發行金融債券，得以折價或溢價方式發售，其開始還本期限，不得低於兩年。儲蓄銀行金融債券之最高發行額，以發行銀行淨值之二十倍為限；其發行辦法，由中央主管機關洽商中央銀行定之。
 
@@ -214,13 +238,17 @@
 
 * 100 本法稱信託投資公司，謂以受託人之地位，按照特定目的，收受、經理及運用信託資金與經營信託財產，或以投資中間人之地位，從事與資本市場有關特定目的投資之金融機構。信託投資公司之經營管理，依本法之規定；本法未規定者，適用其他有關法律之規定；其管理規則，由中央主管機關定之。
 
-* 101 信託投資公司經營左列業務：一、辦理對生產事業之中、長期放款。二、投資公債、國庫券、公司債券、金融債券及上市股票。三、對生產事業直接投資。四、投資住宅建築及企業建築。五、保證發行公司債券。六、辦理國內外保證業務。七、承銷及自營買賣或代客買賣有價證券。八、收受、經理及運用各種信託資金。九、擔任證券投資信託之受託人。十、受託經管各種財產。十一、擔任債券發行受託人。十二、擔任債券或股票發行簽證人。十三、代理證券發行、登記、過戶及股息紅利之發放事項。十四、受託執行遺囑及管理遺產。十五、擔任公司重整監督人。十六、經營證券投資信託事業。十七、提供證券發行、募集之顧問服務，及辦理與前列各款業務有關之代理服務事項。
+* 101 信託投資公司經營左列業務：一、辦理中、長期放款。二、投資公債、短期票券、公司債券、金融債券及上市股票。三、保證發行公司債券。四、辦理國內外保證業務。五、承銷及自營買賣或代客買賣有價證券。六、收受、經理及運用各種信託資金。七、募集共同信託基金。八、受託經管各種財產。九、擔任債券發行受託人。十、擔任債券或股票發行簽證人。十一、代理證券發行、登記、過戶及股息紅利之發放事項。十二、受託執行遺囑及管理遺產。十三、擔任公司重整監督人。十四、提供證券發行、募集之顧問服務，及辦理與前列各款業務有關之代理服務事項。經中央主管機關核准，得以非信託資金辦理對生產事業直接投資或投資住宅建築及企業建築。
 
-* 102 信託投資公司自有資金之營運，除存放銀行外，以經營前條第一款至第七款之業務為限。
+> 釋：一、原條文第一款放款對象限於生產事業，範圍過狹，難以適應當前需要，爰將放款對象之限制予以刪除。二、為加強短期票券交易，活潑信託資金運用，爰將原條文第二款「國庫券」修正為「短期票券」，並配合第七十一條第六款及第七十八條第七款規定，將「短期票券」列於「公債」之後。三、為避免信託投資公司以所吸收之龐大信託資金投資於不動產或直接投資於生產事業，造成大量購置不動產或發生併吞其他企業情事，嚴重違反金融機構經營之基本原則，爰將原條文第三款及第四兩款業務予以刪除。四、修正條文第三款至第五款係由原第五款至第七款移列。五、修正條文第六款係由原第八款移列，並於「信託資金」之上，增列「定期或不定期」以求明確。六、為配合證券投資信託事業專業化經營、管理之需要，並避免信託投資公司兼營證券投資信託事業滋生利益衝突之流弊，爰將原第九款：「擔任證券投資之受託人」及第十六款：「經營證券投資信託事業」兩款業務予以刪除。另為因應信託投資公司募集共同信託基金之需要，增列第七款。七、修正條文第八款至第十三款係由原第十款至第十五款移列，修正條文第十四款係由原第十七款移列，文字均未修正。八、原第三款：「對生產事業直接投資」及第四款「投資住宅建築及企業建築」修正條文已刪除，惟鑒於臺灣土地開發信託投資公司及中華開發信託公司一向以經營不動產投資（包括開發工業區）及生產事業直接投資為其主要任務，為使該二公司經營上述業務有所依據，且為使信託投資公司能配合政府推動經濟建設之需要，凡經中央主管機關專案核准者，仍得投資上述二項業務，爰增訂第十五款：「經中央主管機關核准辦理之其他業務」，俾資因應。
 
-* 103 信託投資公司應以公債、國庫券、金融債券、銀行保證發行之公司債券或現金繳存中央銀行，作為因違反法令規章或信託契約條款致受益人遭致損失之賠償準備。其賠償準備與各種信託資金契約總值之比率，由中央銀行在百分之十五至二十之範圍內定之。但其繳存總額最低不得少於其實收資本總額百分之二十。前項賠償準備，在公司開業時期，暫以該信託投資公司實收資本總額百分之二十為準，俟公司經營一年後，再照前項標準於每月月底調整之。信託投資公司經營第一百零一條第七款業務時，至少應指撥相當於其淨值百分之十金額，專門經營承銷及自營買賣證券業務；該項專款在未動用時，得以現金貯存，存放於其他金融機構或購買政府債券。
+* 102 信託投資公司經營證券承銷商或證券自營商業務時，至少應指撥相當於其上年度淨值百分之十專款經營，該項專款在未動用時，得以現金貯存，存放於其他金融機構或購買政府債券。
 
-> 釋：一、本條第一項原規定信託資金應繳之賠償準備率過高，有礙信託投資業務之發展，故視信託業財務狀況採取彈性規定，並增列國庫券或現金亦得充作賠償準備，以及最低繳存額之規定，以資適應。二、公司經營一年後，其賠償準備應於每月月底調整，爰將第二項修正予以明定。三、第三項不修正。
+> 釋：一、信託投資公司自有資金之運用，第一百零一條規定之業務，均得辦理，原第一百零二條限制並無必要，爰予刪除。二、原第一百零三條第三項規定與同條第一、第二項無關，爰移列本條。
+
+* 103 信託投資公司應以現金或中央銀行認可之有價證券繳存中央銀行，作為信託資金準備。其準備與各種信託資金契約總值之比率，由中央銀行在百分之十五至二十之範圍內定之。但其繳存總額最低不得少於實收資本總額百分之二十。前項信託資金準備，在公司開業時期，暫以該公司實收資本總額百分之二十為準，俟公司經營一年後，再照前項標準於每月月底調整之。
+
+> 釋：一、鑑於原條文規定繳存之「賠償準備」，僅用於信託投資公司違反法令規章或違反信託契約條款且致使受益人遭致損失時，始得作為賠償之用，其用途過於狹窄，爰將第一項所定「賠償準備」修正為「信託資金準備」，俾對賠償損失或一時流動能力不足等，均可發揮其應有功能。又原條文對得繳存作為準備之公債、國庫券．．．．等，係採列舉方式，往往掛一漏萬，爰將其修正為「中央銀行認可之有價證券」，此外並將「現金」移列為繳存準備之首。二、第二項首句係配合第一項作文字修正。三、原條文第三項已移列民國七十四年修正條文第一百零二條，爰將第三項刪除。
 
 * 104 信託投資公司收受、經理或運用各種信託資金及經營信託財產，應與信託人訂立信託契約，載明左列事項：一、資金營運之方式及範圍。二、財產管理之方法。三、收益之分配。四、信託投資公司之責任。五、會計報告之送達。六、各項費用收付之標準及其計算之方法。七、其他有關協議事項。
 
@@ -232,7 +260,9 @@
 
 * 108 信託投資公司不得為左列行為。但因裁判之結果，或經信託人書面同意，並依市價購讓，或雖未經信託人同意，而係由集中市場公開競價購讓者，不在此限：一、承受信託財產之所有權。二、於信託財產上設定或取得任何權益。三、以自己之財產或權益讓售與信託人。四、從事於其他與前三項有關的交易。五、就信託財產或運用信託資金與公司之董事、職員或與公司經營之信託資金有利益關係之第三人為任何交易。信託投資公司依前項但書所為之交易，除應依規定報請主管機關核備外，應受左列規定之限制：一、公司決定從事交易時，與該項交易所涉及之信託帳戶、信託財產或證券有直接或間接利益關係之董事或職員，不得參與該項交易行為之決定。二、信託投資公司為其本身或受投資人之委託辦理證券承銷、證券買賣交易或直接投資業務時，其董事或職員如同時為有關證券發行公司之董事、職員或與該項證券有直接間接利害關係者，不得參與該交易行為之決定。
 
-* 109 信託投資公司在未依信託契約營運前，或依約營運收回後尚未繼續營運前，其信託資金之臨時營運，應以存放銀行或第一百零一條第二款之用途為限。
+* 109 信託投資公司在未依信託契約營運前，或依約營運收回後尚未繼續營運前，其各信託戶之資金，應以存放商業銀行或專業銀行為限。
+
+> 釋：查各信託戶之資金在未依約營運前，性質上屬於現金，基於穩健經營之原則，上項資金管理，以存放商業銀行或專業銀行為宜，爰予修正。
 
 * 110 信託投資公司得經營左列信託資金：一、由信託人指定用途之信託資金。二、由公司確定用途之信託資金。信託投資公司對由公司確定用途之信託資金，得以信託契約約定，由公司負責，賠償其本金損失。信託投資公司對應賠償之本金損失，應於每會計年度終了時確實評審，依信託契約之約定，由公司以特別準備金撥付之。前項特別準備金，由公司每年在信託財產收益項下依主管機關核定之標準提撥。信託投資公司經依規定十足撥補本金損失後，如有剩餘，作為公司之收益；如有不敷，應由公司以自有資金補足。
 
@@ -244,7 +274,9 @@
 
 * 114 信託投資公司應依照信託契約之約定及中央主管機關之規定，分別向每一信託人及中央主管機關作定期會計報告。
 
-* 115 信託投資公司為設立證券投資信託基金而發行受益憑證，或以公開發售信託憑證方式，募集具有共同信託性質而由公司代為確定用途之信託基金者，應先擬具發行計畫，報經中央主管機關核准。前項證券投資信託基金及由公司代為確定用途之共同信託基金；其管理辦法，由中央主管機關定之。
+* 115 信託投資公司募集共同信託基金，應先擬具發行計畫，報經中央主管機關核准。前項共同信託基金管理辦法，由中央主管機關定之。
+
+> 釋：一、為配合民國七十四年修正條文第一百零一條第七款所定經營「募集共同信託資金」業務之需要，爰於本條第一項將信託投資公司募集共同信託基金之程序予以明確規定。二、第二項係配合第一項酌作文字修正。
 
 * 116 本法稱外國銀行，謂依照外國法律組織登記之銀行，經中華民國政府認許，在中華民國境內依公司法及本法登記營業之分行。
 
@@ -264,7 +296,9 @@
 
 * 124 外國銀行購置其業務所需用之不動產，依公司法第三百七十六條之規定。
 
-* 125 違反第二十九條第一項之規定者，處五年以下有期徒刑、拘役或科或併科七千元以下罰金。
+* 125 違反第二十九條第一項之規定者，處五年以下有期徒刑、拘役或科或併科二十五萬元以下罰金。法人犯前項之罪者，處罰其行為負責人。
+
+> 釋：原規定最高科以七千元罰金，因社會經濟情
 
 * 126 股份有限公司違反其依第三十條所為之承諾者，其參與決定此項違反承諾行為之董事及行為人，處三年以下有期徒刑、拘役或科或併科五千元以下罰金，
 
