民法第五編繼承 1985.5.21

--- a/司法-民事/民法第五編繼承.md
+++ b/司法-民事/民法第五編繼承.md
@@ -6,7 +6,9 @@
 
 * 1141 同一順序之繼承人有數人時，按人數平均繼承。但法律另有規定者，不在此限。
 
-* 1142 養子女之繼承順序，與婚生子女同。養子女之應繼分，為婚生子女之二分之一。但養父母無直系血親卑親屬為繼承人時，其應繼分與婚生子女同。
+* 1142 （刪除）
+
+> 釋：現行民法親屬編規定養子女在身分上既與婚生子女同為一親等之直系血親卑親屬，自不發生繼承順序之疑問，且基於平等原則，在繼承法上其應繼分亦不應與婚生子女有所軒輊，
 
 * 1143 無直系血親卑親屬者，得以遺囑就其財產之全部或一部指定繼承人。但以不違反關於特留分之規定為限。
 
